--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,50 +1,43 @@
 ---
-title: 精致利己与大义为公——明星跪舔中共会为中共陪葬
+title: 2022年中共国的主旋律
 ---
-`mary202064` [轉載自GNews](https://gnews.org/zh-hans/1835389/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835399/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/EaxB18pUEAUo9Xt_副本.jpg)
-2021年11月23日，中国演出行业协会网络表演（直播）分会发布第九批网络主播警示名单，包括“铁山靠”“郭老师”两名职业主播和“吴亦凡”“郑爽”“张哲瀚”三名演员在内的88名主播将在行业内被实行联合抵制和惩戒。吴亦凡等明星已经“臭名昭著”，但中国仍然斩尽杀绝，生怕这些“违法失德艺人”、“劣迹艺人”转移阵地复出。近日王力宏事件被炒作得沸沸扬扬，曾经光芒万丈的王力宏估计很难在短时间内恢复元气。娱乐圈风声鹤唳，随着中共对娱乐圈铁拳整顿，娱乐明星会为自己的纸醉金迷、不问政治付出沉重的代价。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/2022年中共国的主旋律.png)uulucky.com
 
-自2019年6月香港反送中运动以来，来自港台的大部分明星，眼看着香港人不屈抗争却选择了沉默自保，眼看着无数年轻人被摧残流血致死却表现得无动于衷，眼看着中共代理人要抢走台湾的民主自由却依然自娱自乐，眼看着整个世界在逐步为中共邪魔渗透还能装聋作哑、事不关己。最不能容忍的是，香港烈士们的尸骨未寒，中共对香港的钳制无以复加，对台湾更是威胁加恐惧，有一大批港台明星居然还在 CCTV 向中共献媚表忠心。
 
-这些明星的做法看起来非常精明，名利双收，实际上异常短视，会给自己带来灾难性的后果。可能有人会为明星辩白，说他们只是权势和资本控制的小人物，没有能力掌控自己的命运。但事实真是如此吗？中国的足球明星郝海东、羽毛球世界冠军叶钊颖就毅然选择大义，与中共做最彻底的切割，投入到反共灭共最坚决的爆料革命，赢得了亿万人民的爱戴和敬仰，他们以必将因为自己的义举和勇气而青史流芳。
+作者：顺其自然
+编辑：Mttfly
 
-虽然中共的魔爪异常凶残，虽然中共通过政治力量、资本力量、黑道力量、警察力量无孔不入地侵蚀娱乐圈，但对于娱乐圈的明星，依然有选择，一样可以活得气吞山河、荡气回肠。我们今天就来分析一下这些明星跪舔中共之后的可怕后果。
+中共特爱说主旋律，现在就给大家捋一捋2022年中共国的主旋律。
 
-1、变成金钱至上的行尸走肉
+首先，肯定是印钱。卖地收入、税收越来越少了。花钱的地方，只多不少。军队要保，蓝金黄要继续，“非洲兄弟”的钱要接着给。否则各国的政客、精英就要找中共算病毒的账。“非洲兄弟”翻起脸来可不是闹着玩的。权贵的奢靡生活要保，退休金要保，教师、公务员的工资即使少发也要保。中共别无选择，只能印钱。
 
-世间人的趋利避害是本能，本来无所谓对错，关键是如何赚取阳光下的利益，更不能为了金钱就放弃了做人最起码的良善本心。这些年，在中共国拼命赚钱的港台明星实在太多了， 因为怕 CCP 封杀，怕没钱赚，或者有把柄在中共手上，所以选择跪舔中共，以奴才相苟延残喘，认贼作父、颜面尽失。这些人无法抗拒来自金钱名利的诱惑，丧失了对自由民主普世价值的追求，辜负了对他们寄予厚望的观众，当然最对不起的是他们自己的良知。有一位香港歌星曾经这么陈述，她实在瞧不起自己，银行帐户的数额越来越大，但她已经成为一个失魂落魄的行尸走肉，从小的那份自强、自信和骄傲都荡然无存了，剩下的只有名牌和钞票，还必须时刻被 CCP 牵制，每天都活在无名的恐惧里。她甚至不敢照镜子，再也无法坦坦荡荡地面对真实的自己，那种迷失和无助让她无法入眠。
+其次，是斗地主。中共国这四十来年的改革开放，富了一大批的贪官、企业、富豪、明星艺人和网红等。斗这些人，既有政治斗争的需要，也有填补财政亏空的需要。既能排除异己，又能缓解经济问题。类似于和珅跌倒，嘉庆吃饱。
 
-所以规劝那些继续跪拜中共的明星，请像个大写的人一样挺起腰杆站起来，宁可不再去中共国赚钱，也要对得起生养自己的家园。人生如梦，再多的金钱物质都带不走， 只有人格、尊严、美名和善念可以留存。不要留下遗憾，不要成为罪人，请你们勇敢地站出来为民主和正义发声。
+北周开国皇帝宇文泰问他的谋臣苏绰：“国何以立？”苏绰答：“具官。”宇文泰问：“如何具官？”苏绰答：“用贪官，反贪官。”这样有三个好处。一、以权换忠心。想让别人为你卖命就必须有好处，你并没有那么多钱，只好给权。让他用手中的权去搜刮民脂民膏，这些贪官为了保住自己的好处，他就拼命维护你的政权，江山不就巩固了吗？二、以反贪为名，消除不听你话的贪官，保留听话的贪官。这样可以消除异己、巩固你的权力。官吏只要贪污，把柄就在你的手中。三、让贪官当替罪羊，化解仇恨。当用太多贪官而招惹时，那就要加大宣传力度，祭起反贪大旗，把责任都推到贪官的身上。为民伸冤的同时，再把他搜刮的民财放进自己的腰包。所以贪腐，一直是维护江山的必要手段。反贪，是贪腐一个必要的表演环节。
 
-2、 辜负了盛名之下的使命责任
+以贪反贪，中国已经用了两三千年了。很多人义愤填膺追问这么多年为什么没发现这些贪官，早年又是谁提拔的贪官？要知道在一个人治而不是法治的社会中，人员是提拔而不是选举；上下级其实是人身关系上的附属；贪污指数，就是忠诚指数的生动体现。不贪，不能得以提拔。不贿，不能得以重用。最后猪养肥了，就杀了，只是现在因为经济比较发达，不仅是贪官来搜刮老百姓的钱财。富豪、明星、艺人、网红都在用各种手段来搜刮老百姓兜里的钱。2021年，杀了很多肥猪；2022年，杀的肥猪会更多。
 
-明星们选择了在舞台上接受掌声和鲜花，就不可以辜负盛名之下的使命，更不能推卸捍卫自由和守护家园的责任。以香港明星为例，何韵诗女士就是有担当、有责任、懂感恩、为大义的明星代表，她在自己的推特平台上写道:“香港人，我们创造了历史。”黄秋生先生支持香港人的反送中运动，他在脸书上发文道:”All we are saying, is give peace a chance. Remember, the world is watching.” (意思是: 我们一直在说的就是给和平一个机会。记住，世界都在看。) 黄耀明先生也在脸书上写下” 保卫香港就是每一位真慈父、真慈母的责任;爱香港的每一位不要再阿谀逢迎阿爷，我们一齐并肩同行，保卫香港”。
+然后，某些边缘地区的县城乡镇会出现打白条现象，类似于上世纪八九十年代那样。在上世纪八九十年代，农业税一般要占到县城财政收入的40%左右，其中一部分还要上交。再加上当时物价上涨，国家开始逐步的调整工资，调整工资的钱要由县里出，但是只调整名义工资不发钱，被很多人戏称为“空调”。当时县财政还有一句话叫“八月十五见光明”，意思是到秋收了，县里才有点儿钱。平时就是到处借钱用，县以下的基层陷入开支困境。所以，当时各县乡镇由于财力紧张或者资金被挪用，购买农民销售农产品常常无钱支付，买粮就打白条，买烟也打白条。农民眼巴巴的盼着这个钱给孩子交学费、看病、买盐、打酱油，结果县里或者是乡里就给你一个白条儿。现在各地房地产不行了，没有大型企业的地方乡镇，在2022年肯定还会出现打白条的现象。
 
-但在香港事件中，更多明星选择置身事外、冷眼旁观甚至为邪共恶行站台，完全放弃了自己作为本土明星的守土责任，更放弃了人之为人的求真求善的责任。明星们都是靠一方水土成长，更要靠大众支持成名，如果忘恩负义、数典忘祖，就等于丢掉了做人最基本的慈悲和正直，背弃了公众人物应该守护百姓的天职，背叛了自己做为大众偶像的良知，这是一种失职的恶行。那些积极配合中共大外宣，主动站出来支持残暴港警的明星们，已然成为CCP的帮凶。有良知的民众会永远支持不畏强权的良心明星，必定会唾弃那些只要奖杯和光环不肯为大义付出的伪善小人，更要大声谴责为五斗米折腰的无良鼠辈。
+再次，是加税。之前说过持有股权、股票、合伙企业财产份额的，权益性投资的，个人独资企业、合伙企业、明星艺人、网红直播的劳务报酬所得的、个体工商户经营所得的都将成为征税对象。逐步取消个人所得税核定征收，查账征收在2022年全面实施。随着税率改变，这些人要加大交税力度了。再有2022年房地产税也会在某些城市试点，遗产税也会走向立法进程。之前挣得钱都慢慢的交给国家交给党吧。
 
-3、同流合污后形象尽毁
+最后，就是减少岗位。因为财政没钱了，所以某些财政困难的县市就会裁员，减少岗位。其实这些年已经裁掉一些了，比如各地方电视台、电台。中共把这些都推给了市场，赚不到钱就关门倒闭。2022年，类似的事将不断发生。
 
-众所周知，大名鼎鼎的成龙先生已经成为中共的代言人，他为中共站台的行为遭到了全球华人和国际社会的反感和抨击，甚至已经成了民主社会的笑柄。他依靠 CCP 在中共国获得了巨大利益，在美国好莱坞更是名利双收。成龙本可用自己的影响力传播正义，唤醒沉睡的、被洗脑的 14 亿人，但他却选择成为中共大外宣的骨干，他公开声称美国是最腐败的国家，甚至抱怨香港人的自由太多了，这种颠倒黑白的舔共恶行实在令人不耻，他侮辱了香港人的称号，注定会沦为 CCP 的殉葬品。还有刘亦菲，她是美国公民，迪士尼上演的大片《花木兰》中出演不畏强权的女英雄花木兰，可惜她选择撑港警为中共站台，把和平请愿的香港人说成暴徒，她的言行引来了无数迪斯尼影迷们的抵制。
+在中国历史上一直有一个词叫轻徭薄赋，但历朝历代基本没有实施，反倒是横征暴敛盛行。财政没钱，有些有罚款权力的部门又会大规模出动，交警、卫生、环保……都会为自己的部门去创收。倒霉的只有老百姓。
 
-像成龙和刘亦菲这样的港台明星还很多，他们的口是心非和正邪不分已经把自己送上了万劫不复的审判台。钟镇涛、梁家辉、谭咏麟等家喻户晓的大明星们，在香港的危难时刻，不但没有用自己的明星效应为香港背书，更没有勇敢地对 CCP 说不，而是站在了撑港警的队伍中，成了邪魔镇压的帮凶，令人扼腕不止，他们辱没了明星的起码道义、责任和尊严，使自己几十年积淀的明星光环一夜蒙尘，让自己的人生陷入黑暗。
+2022年，会是更加难熬的一年。
 
-请执迷不悟的明星们睁开眼睛看看，全世界自动灭共的趋势无人可挡，灭共已经进入倒计时。为什么你们对 CCP 的邪恶了如指掌却还心甘情愿地助纣为虐呢？回头还来得及，希望你们醒悟，回到普世价值的正道上来，古往今来，凡是和邪魔共舞的势利小人必遭天谴雷诛。
+*发布：Mttfly*
 
-4、人为刀俎我为鱼肉，会被CCP随心所欲摧毁、践踏
-
-中共是魔鬼一样的存在。和魔鬼做交易，永远不可能占得便宜。那些明星为了获得中共的利益，甘心为魔鬼唱赞歌，可在中共眼中，所有他能掌握的明星都是棋子，都是工具，中共毫无对艺术的尊重，也毫无对艺人的尊重。中共要捧红的多少明星，需要出卖自己的肉体和灵魂，需要被高官包养、双修、群修。如花似玉的范冰冰需要侍陪“除了手硬哪里都不硬”的王岐山，美艳动人的佟丽娅要嫁给颇有乡村气息的慎海雄。能明媒正娶，明星就要大念阿弥陀佛了。更多时候，这些明星只是中共官员泄欲的工具，玩弄之后被抛弃，或者被再次利用，成为中共蓝金黄的资源。
-
-明星的名誉在中共眼中一钱不值，随时可以被中共征用，掀起舆论魔咒，掩盖中共的丑闻和罪恶。2021年1月20日，美国国务院称中共在新疆犯下反人类罪，这一调查结果是美国政府有史以来对中国新疆政策的最严厉谴责，但全国舆论没有对此作任何回应或者报道，反而反复炒作郑爽丑闻。2021年7月20日，郑州“泄洪在前，暴雨在后”，致使上万生命遇难；同时，中共国红头文件定性吴亦凡为“劣迹艺人”，中共又抛出吴亦凡来转移民众视线。明星丑闻因明星效应和民众的猎奇心广受关注，这些片面、偏颇的新闻舆论对明星也会造成强烈的伤害，但中共哪里会有一点怜惜之意、怜悯之情？与权力为伍，最终成为的是权力的玩偶！
-
-在港台，很多明星信仰佛教，很多人甚至以唱诵佛经为荣，但为恶魔站台的行为，恰恰同以慈悲大爱为目标的佛教经义背道而驰。佛陀鼓励众生看破生死并放下欲望，这些为私欲泯灭良心跪舔中共的明星们，不但没有悟出佛经的真实意，离明心见性的觉悟越来越远，还让自己陷入更深的无明黑暗。
-
-人无完人孰能无过，放下屠刀方可立地成佛。希望那些曾经迷失的明星们从更多的争名逐利中抽身而退，能与CCP及早切割，利用自己的影响力守护香港、守护台湾、守护自由、守护法治。如果明星们依然顽固不化，继续拥抱邪共，必将被中共毁灭，成为中共这个邪恶政权的殉葬品。
-
-作者：海阔天空 正道人
-
-查看作者更多文章，请点击——[中文简体](https://gnews.org/zh-hans/author/mary202064/)、[中文繁體](https://gnews.org/zh-hant/author/mary202064/)、[English Articles](https://gnews.org/author/mary202064/)
+**
+****更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
