--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,33 +1,23 @@
 ---
-title: 美国法院下令FDA每月公开55000页辉瑞疫苗数据
+title: 美最高法院大法官索尼娅否认新冠法规是疫苗强制令
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1835129/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1835182/)
 
-#### 撰稿：日本东京方舟农场  海星
+#### 撰稿：黄金精神
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/FA151F87-10BF-47DB-82CF-392A3E380ECF.jpeg)（图片来源：零对冲）
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-471.png)**图片来源：nbc news**
+1月8日据福克斯（Fox News）报道，最高法院法官索尼娅·索托马约尔（Sonya Sotomayor）在周五就拜登政府关于职业安全与健康管理局（OSHA）概述的新冠法规辩论的听证会上，积极地回击了”疫苗强制”一词。
 
-据《零对冲》1月7日报道，美国律师亚伦·西里（Aaron Siri）在其博客上披露，法院已下令要求食品和药品监督管理局（FDA）每月公开55000页辉瑞公司申请批准疫苗的文件数据。
+索尼娅在口头辩论中说：”新法规里没有提出任何要求。没有人要求强制接种疫苗。这是完全不同的东西。我不知道国会还能比651号文件更清楚多少。”
 
-亚伦律师之前代表其客户要求FDA对外公开辉瑞公司申请批准新冠（中共病毒）疫苗时提交的所有数据。然而，FDA却向法院提出每月只公布500页数据的要求。若按照此要求，辉瑞疫苗的申请许可资料将需要超过75年的时间才能全部公开。
+这似乎是在挖掘一种说法，即由于该强制令允许用每周测试来代替强制性疫苗接种，因此它不是强制的。职业安全与健康管理局表示，这是其疫苗接种和测试紧急临时标准（ETS）的一部分，该标准涵盖拥有100名或以上雇员的雇主。索尼娅称，ETS要求所涵盖的雇主建立、实施和执行书面的强制性新冠疫苗接种政策；但对于那些建立、实施和执行书面政策要求未接种疫苗的雇员每周接受新冠测试并在工作场所戴口罩而不是接种疫苗的雇主除外。
 
-亚伦律师兴奋地表示，联邦法官拒绝了FDA的要求，并下令其提高效率，每月对外公开55000页辉瑞疫苗的数据。这意味着只需要8个月的时间，民众就能查阅到辉瑞疫苗的所有数据。
+代表全国独立企业联合会（the National Federation of Independent Business）的斯科特·凯勒（Scott Keller）认为，OSHA法规最初是为了保护工作者不受未接种疫苗的同事的影响而通过的，现在由于 “CDC的指导意见与法规的基本假设相矛盾”，已经过时了。
 
-《零对冲》的报道指出，此案件的判决将为科学家解决当前疫苗产生的严重问题提供必要的数据，同时消除联邦政府卫生部对科学家研究疫苗问题的禁锢。
+索尼娅迅速回击说：”是的，这可能是事实，但我们现在的死亡人数是未被压缩的，感染新冠使人们在非常时期内无法工作。而且已经有消息证实：在某些行业，如医疗行业，当疫苗被强制要求时这里没有强制要求接种疫苗，但有口罩强制令，在我看来这与疫苗强制令并没有区别。”
 
-据报道，法官在下令FDA及时公布这些文件时表示，对外公开这些数据对公众至关重要，它应该是FDA的最高优先事项之一。 这位法官引用詹姆斯·麦迪逊的话指出：“如果公民没有得到信息，或者没有获取信息的手段，人民的政府就只不过是一场闹剧或悲剧的序幕。”
-
-法官同时还引用了约翰·肯尼迪的名言强调：“一个不敢公开信息让人民判断真假的国家，是一个害怕人民的国家。”
-
-*参考链接：[Judge Rejects FDA’s 75 Year Delay On Vax Data, Cuts To Just 8 Months](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)*
-
-* * *
-
-*素材采编：海星*
-
-*编辑：青衣青青*
-
-*发布：miumiu*
+**[新闻来源](https://www.foxnews.com/politics/sotomayor-denies-biden-rule-vaccine-mandate-despite-osha-language)**
 
  
 
