--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,25 +1,46 @@
 ---
-title: 巴西出现首个因奥密克戎死亡病例 生前已接种
+title: 踏雪留痕
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1835122/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1835142/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-下午1.40.24.jpg)巴西出现首个因奥密克戎死亡病例 生前已接种 网络图片
-据俄罗斯卫星通讯社1月7日暨巴西新闻网站G1报道，巴西出现首个因感染奥密克戎毒株后死亡的病例。死者68岁，生前患有高血压和慢性肺病，接种过3剂疫苗。
-
-打脸了吧？撒谎成性的左媒和疯狂的疫苗推进者、杀人凶手们，不是说疫苗有效吗？不是说打了疫苗，就算感染也不会得重症吗？这位患者打了三针疫苗，不仅感染了，还死了。全球防不胜防的奥密克戎，哪种疫苗能防住？人民不觉醒、不起来反抗，杀戮不会停止。
-
-新闻参考链接：[https://sputniknews.cn/20220107/–1036983826.html](https://sputniknews.cn/20220107/--1036983826.html)
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+作者：香草山农场教育部 – 雨过天晴Rainbow
 
 
-编辑：【英国伦敦喜庄园编辑部】
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2021/10/logo-5-768x103-6.jpg)
+
+
+
+2022年美国东北部的第一场大雪悄然而来，晨曦未露，疫情期间继续坚持晨练的妹夫已经身现海傍公园的长堤并留下他小跑过后的一步步雪印。压腿、跑步、单杠引体向上、双杠前后空翻、倒立是他每天的基本锻炼项目。
+珍惜自己的健康，因为一旦自己倒了，所有的家人朋友，所有的财富，所有的爱恨情仇都将成为浮云！ 这是他对中共释放病毒入侵世界后的切身感受。文贵先生的话：“今天你健身了吗？”每天都在提醒着他。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/16x9-feature-photos-MOS-logos.png)
+这张微信传来的相片令居家工作的我，停下手头上的工作，驻足玻璃门窗旁往外观雪。光秃秃的树上一夜间开出了茸茸雪花，院子里的大小花盆也装满不同式样的冰淇淋，周围各家各户的门前盖上了10英寸的雪融被⋯⋯，下雪了！
+以往的雪后可见左邻右舍大人小孩一起合力铲雪，问候声、笑声连连。时而会走来一群小孩子问需要帮忙铲雪吗？随着他们发出兴奋的欢叫声，你会猜测到屋主家给予他们一个可观的报酬⋯⋯！而今寂静的街道上，只见偶尔驶过一辆铲雪车却不见行人。家家户户门前停着私家车。眼前苍凉景象让我不禁感叹遐想：对面临街窗户的背后同样会闪过忧郁的眼神吗？
+入夜后，一阵视频通话铃声响起，接通后凭借着微暗的路灯，小孙子高兴地让我看他在自己家院子里滑雪。看着在雪地上欢乐踏雪的身影和被滑板压出的一道道雪痕，我的眼眶湿润了⋯⋯！
+中共灭绝人寰地释放中共病毒，变本加厉制造并推进疫苗伤害，破坏剥夺民众正常的工作生活模式，威胁破坏世界经济秩序，妄想实现它那统治称霸世界的野心。但中共犯下的所有罪恶印记都将暴露在民主正义的阳光下！
+2022年的第一场瑞雪虽被中共病毒掩盖了往年嬉戏弄雪的乐趣和兴奋，可我有幸见证爆料革命的奇迹，跟随文贵先生一路走来并留下一串坚实的足迹👣⋯⋯！
+愿灾难早日消失，还天下仓生安宁！
+God bless you and your family！
+
+编辑/校对/发稿：为真不破20
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-82.png)
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 You****Tube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/09/GNEW-GTV-MOS-LOGO-2-2-1-1-400x54-1.jpeg)
 
 
 
