--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,24 +1,37 @@
 ---
-title: 朝鲜拒绝参加北京冬奥会 中共不得不表示“理解”
+title: 中共国的污染对中国男性健康的摧残
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835075/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1835091/)
 
-撰稿：东京樱花团/小小星
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-24.jpg)[图片来源](https://ucpnz.co.nz/2022/01/07/%E6%9C%9D%E9%B2%9C%E6%AD%A3%E5%BC%8F%E5%91%8A%E7%9F%A5%E7%BC%BA%E5%B8%AD2022%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5%E4%BC%9A%E3%80%80%E4%B8%AD%E5%9B%BD%E5%A4%96%E4%BA%A4%E9%83%A8%E8%A1%A8%E6%80%81/)
-据朝中社1月7日报道，朝鲜奥委会和体育省向中共奥委会、北京2022年冬季奥运会及冬季残疾人奥运会组委会、中国国家体育总局致信函。
+精神健康，食物健康、环境健康，是绝定男人头发少或多的最根本原因。
 
-信函称，朝鲜虽不能参加本届奥运会，但朝鲜将全方位支持和声援中国要举办一届隆重精彩的奥运盛会的一切事宜。信函表示，朝鲜坚信兄弟的中国人民和运动员将战胜一切妨碍活动和困难，成功举办北京冬奥会。
+【郭先生直播摘要】** 2022.1.1 **性与水与男性的健康，** CCP**污染对中国男性健康的摧残
 
-对于朝鲜这个小弟不参加冬奥会，中共内心恼怒，面上还得应付，因为一开骂就更加暴露自己的众叛亲离，只能表示感谢和理解！
+**郭先生**
 
-信息来源：
+共产党那些老流氓他总是恨不得， 生下来就给人家蓝金黄去，就给人家上玉米地去。 他让别人一辈子不去玉米地，这是何种的变态呀。 Eglise说的话你看我记住了没有， 这水和一生的关系实际是很大。 文霄看我你跟你七哥一样， 头发都不多了。 你这也是水少的原因， 你知道水多了头发就会很旺，长得就比Ruth这样的头发比这神奇女孩多， 比她们都长， 你简单说说。 你这一生你遇到过水多过吗兄弟? 你遇到过吗? 你现在也没遇到过吧。
 
-[朝鲜：因全球疫情等原因无法参加北京冬奥会](https://news.sina.com.cn/c/2022-01-07/doc-ikyakumx8799639.shtml)
+你没尝过这快乐吧， 你知道为啥中国男人头发都普遍比较少吗? 你说说这啥关系？ 就水和男人的头发有什么关系啊兄弟？
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**文霄****:**
 
+七哥我是从小头发从来就没多过，哈哈哈不是后掉的，先天长的。
+
+**郭先生**
+
+就是好几代了， 就属于好几代受害的。
+
+**文霄**** **
+
+刚才就是文紫战友说的这句话我想再补充一句，我自己不是医生，但是我妈妈是医生。然后我家里亲戚医生特别多，就是国内这个，现在你问医生啊，这个医患关系紧张很大的问题。就是医生也很不高兴，患者也很不高兴，谁都不高兴。然后这个医生的这个工作强度也很大，然后这个就是跟经济挂钩也很紧。 所以说这个这个不可能有，有那么强的生育欲望。
+
+**郭先生**
+
+谢谢文肖兄弟说对了，我告诉你，这不是七哥乱说你们都是医生，七哥不能信口开河。中国对男性的健康做过调查，英国人平均寿命68岁，法国人平均78岁，意大利、西班牙都平均78岁到80岁，但到了德国就60多岁，连比利时都70多岁，原因很简单，英国人喝啤酒，德国人喝啤酒。德国人、英国人吃的是脂肪油。还有工作压力大，天气没那么好，所以德国、英国人度假往西班牙，冬季到那块去找水去。
+
+而且这几个国家，人家性生活普遍比德国、英国，都要大概多十倍以上，而且吃的是橄榄油，喝的是红酒，所以喝啤酒，吃猪肉，吃脂肪是不好的。 阳光少是不好的， 那么这些国家地方呢。这几个国家普遍男人头发， 比英国、德国男人头发多的多还长， 所以精神健康， 食物健康、环境健康。 是绝定男人头发少或多的最根本原因， 兄弟啊咱们都是几代人被害呀。 爹的头发很年轻时候也都少了， 你知道了吗? 我也是，所以被害，害二代，我头发也都没那么多，是吧？
+
+视频剪辑：北方信使 |听写：烟波浩淼 | 翻译：Arthur | 校对：Polaris | 视频制作+字幕：刀锋舞者 | 编辑&发布：断播
 
  
 
