--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,25 +1,40 @@
 ---
-title: 加拿大人均债务创历史新高
+title: 有声&#124;海外少数民族团体控告中共并抗议冬奥会
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1834993/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1834995/)
 
-采编：文莱     编译撰稿：文明(添草灭共)
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a-16-edited.jpg)图片来源：GDZK
+配音：香草山福音部 – Daxia
 
 
-据加拿大自媒体【后千禧年】1月5日报道，自从总理特鲁多的自由党政府掌权以来，该国目前的人均债务达已达到历史最高水平。
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E6%96%B0.png)
+当地时间1月4日，据海外多家媒体报道，时逢中共北京冬奥会在即，流亡海外的西藏和新疆群体向当地司法机构提起诉讼，控告中共政府侵害人权。 同时，他们也在当地发起抗议示威活动，以此反对即将到来的北京冬奥会。
 
-报道称，[加拿大统计局]的最新数据显示，目前加拿大人在联邦债务中的平均份额已高达2.4万加元，较疫情之前增加了43%。这意味着该国所有人一出生就欠债超过2万加元。
-据悉，尽管加拿大人正面临着生活必需品和食品价格的大幅上涨，但特鲁多当局却罔顾通胀危机，仍计划在此前1千多亿加元的超额赤字预算基础上，再增加780亿加元作为联邦政府未来5年的额外支出。
+据了解，中共曾在1950年以所谓“和平解放”的名义向西藏派兵。此后，中共政府一直以残酷手段统治着该地区。此外，中共高层及警察部门还在新疆地区大肆建立集中营，并对当地维吾尔人及其他少数民族施以残暴的种族灭绝行为。
 
-有鉴于此，不难得知：在疫情危机将导致的经济崩溃，疫苗伤害所引发的人道灾难情况下，特鲁多自由党治下的联邦政府正在分崩离析的道路上越走越远。
+对此，一群流亡印度的西藏人当天在印度北部的达兰萨拉举行了反对中共北京冬奥会的抗议示威活动。抗议者表示，如果国际社会和运动员不抵制北京冬奥会，他们就会成为中共 “种族灭绝 “的同谋。
 
-* * *
+与此同时，针对中共在新疆地区实施的种族灭绝和反人类罪，生活在土耳其的流亡维吾尔人也在当天对112名中共官员提起了刑事诉讼。此外，还有超过150名维吾尔人聚集在土耳其首都伊斯坦布尔法院前举行示威游行，抗议中共政府的残忍做法。
 
-校对编辑，发稿：硫酸羟氯喹64
+据悉，目前大约 5万名维吾尔人生活在土耳其，他们中的绝大多数都对中共举办冬奥会表示反对。
 
-原文链接：https://thepostmillennial.com/record-high-debt-in-justin-trudeaus-canada
+文字版原文：[海外少数民族团体控告中共并抗议冬奥会](https://gnews.org/zh-hans/1828873/)
+
+音频处理：喜山必胜Maverick
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
