--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,24 +1,25 @@
 ---
-title: 加拿大BC省医疗系统因奥密克戎而不堪重负
+title: 加拿大人均债务创历史新高
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1834982/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1834993/)
 
-采编：文莱       翻译编辑：文所未闻
+采编：文莱     编译撰稿：文明(添草灭共)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a-15-edited.jpg)图片来源：vancouversun
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a-16-edited.jpg)图片来源：GDZK
 
 
-据加拿大《温哥华太阳报》1月6日报道，由于“奥密克戎”疫情的迅速蔓延所导致的住院治疗人数激增，以及大量医务人员因感染病毒而无法继续工作等原因，BC省的卫生保健系统目前已接近崩溃的边缘。
+据加拿大自媒体【后千禧年】1月5日报道，自从总理特鲁多的自由党政府掌权以来，该国目前的人均债务达已达到历史最高水平。
 
-据悉，自今年新年伊始，BC省的疫情住院人数增加了44%，重症感染病例增加了14%。由于医务人员严重短缺，该省大部分的医生和护士都被要求放弃休假，并不得不连续加班工作。在如此不堪重负的情况下，该省的大量非紧急手术都因此被迫推迟进行。
+报道称，[加拿大统计局]的最新数据显示，目前加拿大人在联邦债务中的平均份额已高达2.4万加元，较疫情之前增加了43%。这意味着该国所有人一出生就欠债超过2万加元。
+据悉，尽管加拿大人正面临着生活必需品和食品价格的大幅上涨，但特鲁多当局却罔顾通胀危机，仍计划在此前1千多亿加元的超额赤字预算基础上，再增加780亿加元作为联邦政府未来5年的额外支出。
 
-该省卫生部门对此表示，由于疫情仍然会因“奥密克戎”病毒的全面传播而进一步恶化，因此广大民众应该尽量呆在家中，并继续配戴口罩，以此缓解医疗系统目前所面临崩溃的巨大压力。
+有鉴于此，不难得知：在疫情危机将导致的经济崩溃，疫苗伤害所引发的人道灾难情况下，特鲁多自由党治下的联邦政府正在分崩离析的道路上越走越远。
 
 * * *
 
 校对编辑，发稿：硫酸羟氯喹64
 
-原文链接： https://vancouversun.com/news/local-news/covid-19-staff-shortages-loom-in-hospitals-as-patient-numbers-rise-workers-fall-ill
+原文链接：https://thepostmillennial.com/record-high-debt-in-justin-trudeaus-canada
 
  
 
