--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,21 +1,27 @@
 ---
-title: 每时每刻的认知 （六）
+title: 中共病毒奥米炕患者出现了非常奇怪的症状
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1835243/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1835277/)
 
-投稿人：春风秋雨
-![](https://assets.gnews.org/wp-content/uploads/2022/01/863A58D1-D0FC-4C15-B4D5-6798DA4ED0A9.jpeg)图片来自战友
-每时每刻的认知，追随文贵先生，加入爆料革命让我们每位战友，在这病毒疫苗灾难中知道真相，传播真相。
+翻译/撰稿：GoergeC（乔治）
+校对：zzballack
+上传：无明逆流
 
-Covid病毒疫苗灾难已经悄悄的开始，民众在无法防备之中，在Omicron病毒无情的肆虐之中，仍旧去相信政府说辞。就在前不久，美国国家健康研究院对中共病毒患者进行研究，44名中共病毒患者完整的尸检表明，从急性感染到症状出现后的7个多月，中共病毒在肺部之外，还广泛分布于整个人体包括大脑，甚至是死于无症状或者轻度中共病毒患者也是如此。美国名医彼得.麦卡洛最新病毒和Covid疫苗研究也指出：Omicron病毒是通过空气传播，会在鼻子和喉咙中停留3天，然后向下移动到肺部。 不停的病毒疫苗，慢慢来临的灾难，可又有多少人能明白清醒呢？
+据《每日连线》 (The Daily Wire)1月5日报道，**夜间盗汗（night sweats）**是中共病毒奥米炕（Omicron）变种的“新的奇怪症状”。梅奥诊所(Mayo Clinic)对**夜间盗汗**的定义是“反复发作的极度出汗，可以浸湿你的衣服和床单。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/s112.jpg)IAN HOOTON/SCIENCE PHOTO LIBRARY/Getty Images
+**据《财富》（Fortune）杂志报道，夜间盗汗**通常与流感、焦虑甚至癌症等其他疾病有关。在奥米炕开始迅速蔓延到全球之前，出现夜间盗汗症状的新冠患者很少。**夜间盗汗**和喉咙痛看起来似乎是少数可以将奥米炕与其他新冠变种区别开来的明显症状。与德尔塔（Delta）变种和袭击美国的原始新冠病毒株不同的是，奥米炕似乎不会导致嗅觉和味觉的丧失。”
 
-Covid-19病毒、Delta病毒、Omicron病毒，各种的病毒让世人已经麻痹已经精疲力尽，各种的危机也在蠢蠢欲动，如何防范如何保护自己。早在2021年12月19日文贵先生大直播中，文贵先生根据爆料革命科学家的爆料，就阐述了：“感染过中共病毒的人，无论年龄大小，若无后续排毒治疗，有50%概率患上淋巴系统和免疫系统的癌症，因为中共病毒一旦感染，病毒不局限于呼吸系统，病毒会遍布全身，从而引发各种急性和慢性、有症状和无症状的炎症和疾病，迫使淋巴系统和免疫系统长期超负荷工作，导致癌症”的说法。对世人又一次提前警告。
+美国国家广播公司（NBC）新闻的高级医学记者约翰·托雷斯 (John Torres)博士在NBC的《今天秀》（Today Show）节目中表示，**夜间盗汗**是一种“非常奇怪的症状”。此外，英国国民医疗服务体系（NHS）的阿米尔·汗 (Amir Khan)博士也表示，**夜间盗汗**可以作为进行新冠检测的理由。
 
-美国名医彼得.麦卡洛最新病毒和Covid疫苗研究同时指出：必须保持喉咙和鼻子清洁。每天预防性冲洗两次，早期治疗时最多每4个小时就要冲洗一次，降低病毒载量减轻病情。如此的巧合，文贵先生因为花粉过敏，早在2020年就开始每日清洗鼻子，自从中共开始释放病毒，文贵先生每次大直播都告诫战友们“要注意清洗鼻子，出门回来要洗手洗鼻子。”
+最近的另一份报告称，奥米炕患者有一种新的症状。英国《镜报》（The Mirror）上周报道说：“（新冠不同变种）的一些症状相同或非常相似，例如干咳，但人们需要警惕一些可能看起来很不寻常的症状。例如：食欲不振。如果有些人没有症状，但有食欲不振的情况，这可能有助于确定是否感染了新冠病毒。”
 
-文贵先生是上天派下来保护世人的使者，我们全球的战友们是文贵先生坚定的追随者。在文贵先生引领下的新中国联邦，肩负着巨大使命。让我们不忘初心，坚持不懈加入爆料革命，用行动参与其中，完成这伟大的使命，拯救世界。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
-发稿：MG6
+《镜报》的文章中写道：“参与ZOE 新冠症状研究的科学家查看了研究数据中阳性病例记录的症状数据，并将其与去年10月初德尔塔流行时的症状纪录进行了比较。结论是，食欲不振是新冠患者经历的一个症状，这些患者要么已经确诊、要么可能感染了奥米炕病毒，这表明当人们感染奥米炕而不是德尔塔时，更有可能会出现食欲不振的情况。”
+
+ZOE研究一直在使用智能手机APP跟踪参与者报告的新冠症状。根据在去年12月3日至12月10日期间在伦敦收集的数据，他们报告说，奥米炕变种的五大症状是流鼻涕、头痛、疲劳（轻度或严重）、打喷嚏和喉咙痛。
+
+**评论：**爆料革命一再传播，中共所放的病毒是由中共实验室所造；中共病毒疫苗和中共病毒是毁灭人类的子母弹。另一方面，夜间盗汗预示着人体自身免疫系统出了严重的问题，通常与癌症联系在一起。中共病毒奥米炕变种会导致夜间盗汗，其隐蔽性和所造成的毒性可以印证文贵先生的判断，也就是病毒出自中共实验室。更重要的是，病毒和疫苗并将对人类的健康和人类所创造的文明造成双重灾难。对于有信仰的新中国联邦人来和全世界的灭共战友们来说，渡过大劫难的唯一方法就是，登上爆料革命和新中国联邦这一诺亚方舟！
+
+新闻来源：[Omicron Infections Are Showing ‘Very Strange Symptom’ According to New Report](https://www.dailywire.com/news/omicron-infections-are-showing-very-strange-symptom-report)
 
  
 
