--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,42 +1,52 @@
 ---
-title: 7.24系列——瑞银集团UBS的斑斑劣迹
+title: 魁北克省媒体造势——应该查出谁未接种疫苗
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835224/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1835256/)
 
-素材收集：WEI6859
-整理/编辑：守望黎明
+2022-01-07
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/PL06I5ECG@RQRHYTU.png)
+编译及评论：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-472-edited.png)图片来源：TVA新闻，TVA NOUVELLES， 2022 年 1 月 6 日
+**这是一个颠倒的世界，我们的整个生活都受到了影响**
+
+TVA新闻（TVA NOUVELLES，让·拜尔拉贡Jean Baillargeon， 战略传播顾问，Expert-conseil en communication stratégique， 2022 年 1 月 6 日）发表题为《让我们筛查并限制未接种疫苗的人》的文章称，这是一个颠倒的世界，仅仅因为 10% 的成年人拒绝接种疫苗，我们限制了 90% 的人口。魁北克省政府公布，未接种疫苗的人占重症监护住院患者的 75%, 占正常住院患者的 50%，我们的整个生活都受到了影响。魁北克省战略传播顾问，让·拜尔拉贡（Jean Baillargeon）在文章提议，筛查出未接种疫苗的人应该是我们现在要做的首要事项。只有这样才能平息那些已经接种了两剂（针）或三剂（针）疫苗的，处于长达两年封锁状态的人们的普遍不满。我们已经到了零容忍的阶段，必须强制接种疫苗。
+
+**征收****“****疫苗税****”****，限制公共服务的使用**
+
+魁北克省政府很快会针对未接种疫苗的人群采取进一步措施。一些政客提议针对医疗费用征收“疫苗税”。另一些人则希望采取措施限制某些公共服务的使用，例如魁北克省酒业协会 (SAQ) 或魁北克省大麻协会(SQDC) 要求在入口处出示疫苗接种护照。
+
+**未接种疫苗的人是谁？他们的资料未知**
+
+这些未接种疫苗的人是谁？我们可以使用魁北克省医疗健康保险卡查出这些未接种疫苗的人的社会经济背景吗？魁北克省医疗健康保险卡准确记录了每个人的疫苗接种情况并生成了疫苗接种护照。他们是一个人住在家里，孤零零的老人家吗？他们是不懂我们的语言，并且需要社区支持和帮助的新移民吗？是出于宗教信仰反对接种疫苗的某些社区成员吗？他们来自哪个地区？他们来自什么社会经济背景？
+
+**筛查未接种疫苗的人应该是我们现在要做的首要事项**
+
+最后，我们能否一开始就简单地确定一下截至 2022 年 1 月 5 日因 COVID-19 住院的 1600 名患者和 185 名重症监护患者的概况？根据政府的百分比，因此目前有 800 名未接种疫苗的住院患者（50%）和 138 名未接种疫苗的患者在重症监护室？筛查出这几百个未接种疫苗的人应该是我们现在要做的首要事项。只有这样才能平息那些完全接种者处于长达两年封锁状态的普遍不满。
+
+**或者接种疫苗或者强制收费？在所有公共服务中都要求出示疫苗接种护照**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-473-edited.png)**在所有公共服务中都要求出示疫苗接种护照**
+我不是公共卫生法方面的专家，但我相信我们已经到了零容忍的阶段，必须强制接种疫苗。尽管未接种疫苗的人完全有权拒绝接种疫苗，但他们必须承担后果，因为这是他们的选择，当然，医疗例外（可以接受医疗服务）。
+
+染上COVID-19 变种的人就像酒后驾车，会导致他人死亡。迄今为止，该病毒已导致魁北克省 11,000 多人、加拿大 35,000 多人和全球 550 万人死亡。
+
+一般来说，接种疫苗的人可能会感染病毒，但他们感染病毒的可能性较小，而且病情会较轻。然而，未接种疫苗的人如果被感染，病情会更严重，住院风险会更大。我们应该参照一些国家的方法，比如新加坡和奥地利，要想结束对90%人口的大范围限制，我们先限制（10%）未接种疫苗的人。如何？例如在所有公共服务中都要求出示疫苗接种护照，如果他们不遵守这个规则就对他们处以罚款；未接种疫苗的人如果被感染并住院，应当向他们收取住院医疗费用。这是一个公平、正义和负责任的社会。
+
+**未接种疫苗的人将无法再进入 SAQ 和 SQDC的所有的分支机构**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-474-edited.png)**魁北克省酒业协会 (SAQ)，图片来源：TVA新闻，TVA NOUVELLES， 2022 年 1 月 6 日**![](https://assets.gnews.org/wp-content/uploads/2022/01/image-476-edited.png)**魁北克省大麻协会(SQDC)和两位年轻的大麻消费者，图片来源：TVA新闻，TVA NOUVELLES， 2022 年 1 月 6 日**
+蒙特利尔日报（吉纳维芙·拉乔伊GENEVIÈVE LAJOIE 2022 年 1 月 6 日星期四 10:44）还报道，从 1 月 18 日起，未接种疫苗的人将无法再进入魁北克省酒业协会 SAQ （一家政府垄断的公司，其职责是在魁北克省全境经销酒精饮料）和魁北克省大麻协会 SQDC （SAQ 的子公司，其职责是管理魁北克省全境的大麻销售）的所有的分支机构。魁北克省很快还将对美发沙龙等其他非必要业务实施疫苗护照。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-475-edited.png)**如果未接种疫苗的人无法再进入SQCD，他们会去黑市（les gens va aller march noir）。两位年轻的大麻消费者说，“（会去黑市）便宜很多，没有税（bien moin chere, pas de tax）”。**
+文章编译及评论人提醒读者，邪恶势力自始至终没有忘记甩锅，嫁祸，威胁，恐吓未接种疫苗的人们。在针对未接种疫苗的人群而采取的不得已的措施——宵禁令，出台后，魁北克省政府开始请求联邦援助，部署加拿大武装部队军人和士兵，旨在促进魁北克省的疫苗接种运动大规模和快速地进行。魁北克省政府还会针对未接种疫苗的人群采取更多的其它措施。病毒仍在传播，疫情正在爆发，大家必须格外小心，特别是参加新中国联邦和爆料革命的未接种疫苗的人一定要更加小心。
+
+每逢佳节倍思亲，全球的战友们大家新年好。魁北克省的战友们，晚上一定要在十点前回家，违者罚款起价最低一千加元。
+
+**参考资料**：
+
+1. TVA新闻，TVA NOUVELLES，让·拜尔拉贡Jean Baillargeon， 战略传播顾问，Expert-conseil en communication stratégique，2022 年 1 月 6 日下午，12:08, «Dépistons et confinons les non-vaccinés», [https://www.tvanouvelles.ca/2022/01/06/depistons-et-confinons-les-non-vaccines-1](https://www.tvanouvelles.ca/2022/01/06/depistons-et-confinons-les-non-vaccines-1)
+2. 蒙特利尔日报，Le Journal De Montreal，吉纳维芙·拉乔伊GENEVIÈVE LAJOIE 2022 年 1 月 6 日星期四 10:44, Les non-vaccinés refusés à la SAQ et à la SQDC dès le 18 janvier, [https://www.journaldequebec.com/2022/01/06/les-non-vaccines-refuses-a-la-saq-et-la-sqdc-quebec-songe-a-imposer-le-passeport-vaccinal-dans-les-salons-de-coiffure](https://www.journaldequebec.com/2022/01/06/les-non-vaccines-refuses-a-la-saq-et-la-sqdc-quebec-songe-a-imposer-le-passeport-vaccinal-dans-les-salons-de-coiffure)
 
 
-
- 
-图片来源：Euronews
-
-
-瑞士的银行为客户保密制度已有约300年历史，1934年瑞士议会正式通过了《银行保密法》。根据这一法律，瑞士的金融机构可以拒绝任何政府对客户账户的调查和监控，除非有确凿证据证明存款人存在犯罪行为，否则账户的信息会受到永久性保护。同时，瑞士的税率也低于美国及大多数实行高税收高福利政策的欧洲国家。因此，全球的富豪都喜欢在瑞士银行开设秘密账户，把自己的巨额财富和资金转入瑞士。根据波士顿咨询集团的数据，瑞士银行业存款额有27%，约合2.1万亿美元属于海外资产。据了解，瑞士的银行目前管理着全球1/4到1/3的私人财富。
-而瑞银集团UBS是瑞士银行业中最具实力的翘楚。它的前身温特图尔银行成立于1862年，后经几次合并重组发展成为瑞士在私人客户业务方面具有寡头地位的银行集团。除经营私家銀行业务外，瑞银集团还为个人、企业和机构提供资产管理、财富管理及投资银行服务，并且是全球服务。目前它管理着全球最大私人財富，全球亿万富豪有一半是其客户。瑞银被认为是全球最大投资者之一，也被认为是全球金融市场的主要做市商。
-但是，瑞士的银行因保密制度缺乏透明度、涉嫌帮助客户逃税而饱受外界诟病，被称为“避税天堂”。瑞士的银行保密法律被不少人利用，钻空子、偷税漏税，也为恐怖分子及独裁政权的非法资金提供了安全的藏身之地。据联合国估计，全球每年跨境转移非法资产、腐败和避税的数额在1万亿-1.6万亿美元之间。值得注意的是，上述提及的数字大多是十年前人们的评估值，而今的实际数字比这要夸张得多。瑞士也一直因此受到美欧等国的压力。而瑞银作为瑞士银行业的排头兵，在违法运作方面的胆大妄为，也独占行业鳌头，受到了各国监管机构的格外“关照”。
-美国自2008年金融风暴后，就借助对瑞银集团进行税务欺诈调查，强力向瑞士施压，要求瑞银交出在该行持有秘密账户的52,000名美国客户的名单。美国司法部指控瑞银隐瞒了这些美国人数以十亿美元计的未缴税资产。
-美国参议院于2008年7月指控包括瑞银在内的瑞士银行，协助美国富人透过总值约180亿美元的海外账户避税，造成美国每年大量税收损失。最终，为了应对美国对瑞银的两项指控、避免已受金融危机重击的瑞银倒闭，瑞士政府不但同意瑞银支付7.8亿美元罚金，还允许瑞银提交约280位美国严重避税者名单，瑞银进一步承诺在一年内提供4450名美国客户的资料。就此打破了坚持了几个世纪的瑞士银行业保密制度。
-无独有偶，最近法国一家法院裁决，要求瑞银支付约20亿美元的罚金，原因是其在2004年至2012年期间协助法国富人逃税。
-瑞银原来的主要业务很长时期内都是瑞士和美国位居第一和第二，但随着中共盗国体制的形成，中共的权贵家族及其代理人们快速积累起了天量的财富，并将这些财富大量转移海外，瑞士也自然而然地成为了他们藏钱的重要地点。这批财富增长速度惊人的超大客户，迅速成长为瑞银的最大客户群。瑞银自然也非常放得下身段提供“优质”服务，对这些盗国家族百般迎合、沆瀣一气，并以此为桥梁建立起了与中共政权的密切联系。盗国贼、中共政权和瑞银三方勾结，“公私”兼顾，干尽了坏事。瑞银也在其中收获多多，除了第一个拿到了外资银行在中国大陆的金融牌照、在中国的金融业务蓬勃发展之外，手握中共外流的大笔资金和通过为中共权贵家族提供大量洗钱服务，瑞银赚得盆满钵满。正因为在中共政权和中共权贵家族手上捞取了巨大无比的利益，瑞银对中共也是言听计从，沦为中共政权和权贵的忠实走狗和打手。
-
-据郭文贵先生的爆料中出示的汇款单，瑞银曾帮助王岐山的“养女”孙瑶单笔跨国汇转过15亿美金的资金。稍有金融常识的人都知道，在跨国汇款受到各国政府重重的限制，能为私人做如此大笔的划款是破天荒的不可思议的事情，可见瑞银的胆量之大、与盗国贼的关系之深。还有，根据文贵先生的情报，中共前政法委书记周永康倒台之后，他和他的手下“石油系”藏在瑞银集团的大笔财富，一夜之间被过户到了王岐山等盗国贼的名下。在以严格保护客户权益而闻名于世的瑞士，在原客户未出面的情况下，把存有十几亿、几十亿美元的那么多超大账户里资金转给他人，这瑞银的恣意妄为也真是够雷人的了！目前，中共国经济形势糟糕透顶、中共内部政治斗争加剧，习近平一直威逼原来的老权贵们把藏在海外的资金转回来救急。前一段时间，江、王两家从瑞银转出的资金就达到300亿美金。这进一步坐实了瑞银就是中共权贵藏钱的大金库啊！
-瑞银之恶还不仅限于为盗国贼提供金融服务、洗黑钱，它还接受中共的旨意直接参与作恶。当郭文贵先生与中共公开决裂出走美国之后，瑞银在中共的指使下，以追加保证金为借口，对文贵先生家族基金持有的海通证券股票进行了恶意平仓，造成了基金三十亿美金的损失。瑞银正是以这个坑害文贵先生的“功绩”为敲门砖，才在中共主子那里邀功请赏，拿到了外资银行进军中国金融市场的第一块牌照。
-另外，中共为了武统台湾，花大价钱在台湾内部的政、商、军各界收买“卖台贼”做内应，而中共与这些“卖台贼”勾兑和输送利益的大笔资金，很多都是由瑞银集团来操作的。
-瑞银集团与各国独裁者、盗国贼们的合作由来已久。在文贵先生的直播里曾提到，当年伊朗的宗教领袖霍梅尼发动“伊斯兰革命”，推翻前政权巴列维政府的时候，巴列维政权在海外的资产有数百亿之多。然而，拿到这么大笔的财富，道貌岸然的霍梅尼连一元钱也没有存入国库，全部装入了个人腰包。瑞银当仁不让地成了这一大笔脏钱的代理人。当时瑞银的管理者曾自鸣得意地说：有了这么一大笔资金，瑞银500年都不会过穷日子了！
-据文贵先生估算，中共权贵们目前藏在瑞银集团的黑钱超过1.2万亿美金。文贵先生愤怒地指出：瑞银集团是中共海外走狗当中表现最为积极、坏事干得最多的一个，这笔帐是迟早要算的！不仅它手里握有的一万多亿美金的中共权贵的黑钱要无条件归还给中国人民，它帮助中共渗透台湾、为武力攻台创造条件的行为，属于一种战争罪行，同样要得到清算。
-
-**发布：**tianzhihuan
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+校对发布：MQ
+![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
