--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,37 +1,49 @@
 ---
-title: 中共国的污染对中国男性健康的摧残
+title: 播客巨星乔·罗根助力,盖特新增一百万新用户
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1835091/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835121/)
 
-精神健康，食物健康、环境健康，是绝定男人头发少或多的最根本原因。
+#### 【雅典娜观察】和你一起探究世界
 
-【郭先生直播摘要】** 2022.1.1 **性与水与男性的健康，** CCP**污染对中国男性健康的摧残
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/gm-2.jpg)图片来源：墨尔本雅典娜农场设计组
 
-**郭先生**
 
-共产党那些老流氓他总是恨不得， 生下来就给人家蓝金黄去，就给人家上玉米地去。 他让别人一辈子不去玉米地，这是何种的变态呀。 Eglise说的话你看我记住了没有， 这水和一生的关系实际是很大。 文霄看我你跟你七哥一样， 头发都不多了。 你这也是水少的原因， 你知道水多了头发就会很旺，长得就比Ruth这样的头发比这神奇女孩多， 比她们都长， 你简单说说。 你这一生你遇到过水多过吗兄弟? 你遇到过吗? 你现在也没遇到过吧。
+#### 整理报道：文扬
+编辑：文泓
 
-你没尝过这快乐吧， 你知道为啥中国男人头发都普遍比较少吗? 你说说这啥关系？ 就水和男人的头发有什么关系啊兄弟？
+当地时间1月7日，据《华盛顿邮报》报道，前总统川普顾问杰森·米勒的社交媒体应用盖特（Gettr），在播客巨星乔·罗根加入后的几天内，已有超过100万新用户完成注册。
 
-**文霄****:**
+根据盖特公司与《邮报》独家分享的数据，作为一个吸引保守派用户替代推特的社交媒体，盖特在周五上午（近一周下载量）达到了100万次大关，这距离罗根周日在该网站上发表第一篇文章还不到一个星期。据盖特发言人埃博尼·鲍登说，这使得该网站的用户总数超过了400万。
 
-七哥我是从小头发从来就没多过，哈哈哈不是后掉的，先天长的。
+目前，播客巨星罗根仍然保留着一个推特账户，他加入盖特是因为担心推特审查制度，因为推特周日禁止了佐治亚州众议员马乔里·泰勒·格林账户，称她多次分享关于新冠疫苗的错误信息。在被禁之前，泰勒·格林在推特上说，“大量的冠状病毒疫苗死亡事件被（政府）忽视”，并呼吁食品和药物管理局不要批准冠状病毒疫苗。
 
-**郭先生**
+“为了预防万一——在推特变得更蠢以前，我现在也在这里了。让我们欢呼吧！”罗根在他的第一个盖特帖子中写道。
 
-就是好几代了， 就属于好几代受害的。
+仅在1月3日，盖特注册用户就达到了343,000，这是该网站自7月推出以来的最大单日注册量。鲍登说，罗根加入该网站，盖特没有支付费用。
 
-**文霄**** **
+在米勒没能争取到唐纳德·川普（加盟）之后，罗根的加入是盖特及时的胜利。而川普在去年10月表示，他计划推出自己的网站，名为真相（TRUTH Social）。
 
-刚才就是文紫战友说的这句话我想再补充一句，我自己不是医生，但是我妈妈是医生。然后我家里亲戚医生特别多，就是国内这个，现在你问医生啊，这个医患关系紧张很大的问题。就是医生也很不高兴，患者也很不高兴，谁都不高兴。然后这个医生的这个工作强度也很大，然后这个就是跟经济挂钩也很紧。 所以说这个这个不可能有，有那么强的生育欲望。
+然而，迄今为止，“真相”开局并不顺利。川普团队说，测试版将在11月上线，然后在2022年第一季度更广泛地发布。但据媒体报道，该网站的多个光秃秃的测试版已在网上泄露，让黑客和记者能够挖出川普自己的用户名。
 
-**郭先生**
+**“真相”**的挣扎使得盖特足以吸引其潜在的用户。最近几周，包括作家乔丹·彼得森、政治评论员戴夫·鲁宾和《纽约邮报》专栏作家卡罗尔·马科维奇和萨莱娜·齐托在内的其他保守派人士也加入了该网站。
 
-谢谢文肖兄弟说对了，我告诉你，这不是七哥乱说你们都是医生，七哥不能信口开河。中国对男性的健康做过调查，英国人平均寿命68岁，法国人平均78岁，意大利、西班牙都平均78岁到80岁，但到了德国就60多岁，连比利时都70多岁，原因很简单，英国人喝啤酒，德国人喝啤酒。德国人、英国人吃的是脂肪油。还有工作压力大，天气没那么好，所以德国、英国人度假往西班牙，冬季到那块去找水去。
+对于保守派来说，该网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。然而，该网站不允许公开的白人至上主义，最近还禁止了白人民族主义“团结右翼”组织者尼克·富恩特斯（加入）。
 
-而且这几个国家，人家性生活普遍比德国、英国，都要大概多十倍以上，而且吃的是橄榄油，喝的是红酒，所以喝啤酒，吃猪肉，吃脂肪是不好的。 阳光少是不好的， 那么这些国家地方呢。这几个国家普遍男人头发， 比英国、德国男人头发多的多还长， 所以精神健康， 食物健康、环境健康。 是绝定男人头发少或多的最根本原因， 兄弟啊咱们都是几代人被害呀。 爹的头发很年轻时候也都少了， 你知道了吗? 我也是，所以被害，害二代，我头发也都没那么多，是吧？
+同时，盖特也在向海外扩张。截至周五，该公司称其在美国有220万用户，其次是巴西的50万用户，以及在英国、德国和法国的重要用户群。相比之下，推特在美国拥有约7800万日活跃用户，在全球拥有2.06亿。
 
-视频剪辑：北方信使 |听写：烟波浩淼 | 翻译：Arthur | 校对：Polaris | 视频制作+字幕：刀锋舞者 | 编辑&发布：断播
+米勒对《邮报》说：“**这些数字证明，社交媒体用户开始对硅谷高管日益严厉的审查制度有所觉醒，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。**”
+
+**盖特从郭文贵家族控制的投资基金处获得了资金。郭文贵是一名成功的商人，自****2014****年逃离中国，与前总统川普顾问史蒂夫·班农关系密切。**据米勒称，该公司还有其他未透露姓名的支持者，截至9月，已经筹集了约7500万美元的资金。
+
+原文链接： [Joe Rogan helps Gettr amass a million new users (nypost.com)](https://nypost.com/2022/01/07/joe-rogan-helps-gettr-amass-a-million-new-users/)
+
+**发布：文泓**
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
