--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,26 +1,23 @@
 ---
-title: 重庆武隆疑似食堂燃气燃爆事故，16人遇难
+title: 朝鲜拒绝参加北京冬奥会 中共不得不表示“理解”
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1835061/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835075/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-10.jpg)重庆武隆疑似食堂燃气燃爆事故，16人遇难 网络图片
-据澎湃新闻1月8日报道，重庆市武隆区凤山街道办事处机关食堂7日发生垮塌，疑似食堂燃气泄漏燃爆。事故发生时，办事处部分职工正在食堂用餐。事故造成26人失联，事后搜救出26人，死亡16人。
+撰稿：东京樱花团/小小星
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-24.jpg)[图片来源](https://ucpnz.co.nz/2022/01/07/%E6%9C%9D%E9%B2%9C%E6%AD%A3%E5%BC%8F%E5%91%8A%E7%9F%A5%E7%BC%BA%E5%B8%AD2022%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5%E4%BC%9A%E3%80%80%E4%B8%AD%E5%9B%BD%E5%A4%96%E4%BA%A4%E9%83%A8%E8%A1%A8%E6%80%81/)
+据朝中社1月7日报道，朝鲜奥委会和体育省向中共奥委会、北京2022年冬季奥运会及冬季残疾人奥运会组委会、中国国家体育总局致信函。
 
-中共国现在到处都是事故，疫苗灾难星火燎原，四处爆发。人员接种疫苗后的副作用，随时也会引发事故。也许这个食堂的工作人员当时突发心梗或者脑梗，无法控制自己触动了紧急阀门，造成燃气泄漏。在中共国全员90%以上接种疫苗的情况下，一切皆有可能。
+信函称，朝鲜虽不能参加本届奥运会，但朝鲜将全方位支持和声援中国要举办一届隆重精彩的奥运盛会的一切事宜。信函表示，朝鲜坚信兄弟的中国人民和运动员将战胜一切妨碍活动和困难，成功举办北京冬奥会。
 
-新闻参考链接：[https://www.thepaper.cn/newsDetail\_forward\_16196263](https://www.thepaper.cn/newsDetail_forward_16196263)
+对于朝鲜这个小弟不参加冬奥会，中共内心恼怒，面上还得应付，因为一开骂就更加暴露自己的众叛亲离，只能表示感谢和理解！
 
-* * *
+信息来源：
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+[朝鲜：因全球疫情等原因无法参加北京冬奥会](https://news.sina.com.cn/c/2022-01-07/doc-ikyakumx8799639.shtml)
 
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
 
  
