--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,36 +1,23 @@
 ---
-title: 哈萨克斯坦动乱的真正原因是什么？
+title: 2022年中共国将有100万辆汽车芯片缺口
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835025/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835074/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+撰稿：东京樱花团/盐和光
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-86.jpg)[图片来源](https://auto.economictimes.indiatimes.com/news/auto-components/chip-shortage-to-cost-automakers-110-billion-in-revenues-in-2021-alixpartners/82625724)
+新浪财经1月7日报道，据香港《南华早报》网站报道，根据世界最大汽车市场的行业联合会预测，随着全球芯片短缺迫使规模较小的汽车制造厂暂停生产，中国蓬勃发展的电动汽车行业可能会在一定程度上陷入冻结。据中国乘用车市场信息联席会（CPCA）说，全球芯片代工厂能够生产足够中国400万辆新能源汽车使用的半导体、单片机和带有人工智能处理器的高端芯片。因此，根据CPCA对2022年中国新能源汽车需求的预测，将出现100万辆汽车的芯片缺口。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/哈萨克斯坦动乱.jpeg)新闻来源：直新闻
+随着CCP病毒和疫苗灾难在世界肆意横行，扰乱了几家芯片代工厂的生产，从而加剧了对2021年第3季度已经吃紧的半导体供应链的压力。中共国开始受到供应链中断的冲击。而与此同时，中共政府正鼓励车主放弃汽油动力汽车，改用纯电动汽车、插电式混合动力汽车和燃料电池汽车，以帮助中共政府在2060年实现碳中和目标。预计今年新能源汽车销量将翻倍，从2020年的117万辆增至240万辆。
 
+缺乏现代科学知识的人，被中共独裁者洗脑的国人眼里只有悠久的传统文化，认为自家源远流长的传统文化是世界上最先进的，盛产“小粉红”的地方是不会有芯片的。
 
-编译：小红帽
+信息来源：
 
-根据《国家利益》1月7日报道， 本周初，哈萨克斯坦西部的扎瑙岑镇爆发了大规模抗议活动，表面上看是由燃料价格的大幅上涨引发的。
+[芯片短缺有多严重？港媒：中国电动汽车行业可能“陷入冻结”](https://my.mbd.baidu.com/r/zhd7j7xHNK?f=cp&amp;rs=1851166628&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=f6e1346face3c6b5)
 
-哈萨克斯坦总统卡西姆·乔马尔特·托卡耶夫（Kassym-Jomart Tokayev）最初以安抚的方式做出回应，对燃料和其他商品实施临时价格管制，但抗议活动迅速升级为全国紧急状态。哈萨克斯坦各地的政府大楼和警察局遭到袭击和纵火，该国最大的机场被短暂接管。
-
-据报道，至少有18名哈萨克斯坦安全人员被政府描述为外国训练的“恐怖团伙”杀害。抗议者的全部目的仍不确定。最近，扎瑙岑的几千名抗议者提出了被《华盛顿邮报》称为 “迄今为止最具体的要求清单”，包括将托卡耶夫赶下台，扩大对公民权利的保护，以及恢复被认为更加民主的1993年版哈萨克斯坦宪法。但是，目前还不清楚这些特定人群的要求是否可以被解读为整个抗议运动目标的准确代表。
-
-据称，**哈萨克斯坦官员与中国相关人员合作，有效地封锁了所有互联网接入，以阻止抗议者组织起来。**北京当局是哈萨克斯坦能源行业的主要投资者，在整个抗议活动期间，北京发表声明，对托卡耶夫给予强烈的支持。
-
-中国领导人习近平表示：“中国愿意向哈萨克斯坦提供必要的支持，帮助哈萨克斯坦渡过难关。无论遇到什么风险和挑战，中国都是哈萨克斯坦值得信赖的朋友和可靠的伙伴。”
-
-新闻来源：[What’s Really Behind the Unrest in Kazakhstan? | The National Interest](https://nationalinterest.org/feature/what%E2%80%99s-really-behind-unrest-kazakhstan-199243)
-
-*发布：小红帽*
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
