--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,65 +1,27 @@
 ---
-title: 文贵直播大事记——朝鲜冬奥不出席，法国密德朗哭泣
+title: 重庆武隆疑似食堂燃气燃爆事故，16人遇难
 ---
-`文贵直播大事记` [轉載自GNews](https://gnews.org/zh-hans/1835019/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1835061/)
 
-国家篇
-![](https://assets.gnews.org/wp-content/uploads/2022/01/文贵直播大事记20220107国家-3.jpg)
-**【编者：内容摘录于文贵大直播，力求保持文贵先生话语的原汁原味，标记了直播日期和时间点，愿读者重温直播以获取更多信息**】
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-10.jpg)重庆武隆疑似食堂燃气燃爆事故，16人遇难 网络图片
+据澎湃新闻1月8日报道，重庆市武隆区凤山街道办事处机关食堂7日发生垮塌，疑似食堂燃气泄漏燃爆。事故发生时，办事处部分职工正在食堂用餐。事故造成26人失联，事后搜救出26人，死亡16人。
 
-[2022.01.07文贵大直播链接](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
+中共国现在到处都是事故，疫苗灾难星火燎原，四处爆发。人员接种疫苗后的副作用，随时也会引发事故。也许这个食堂的工作人员当时突发心梗或者脑梗，无法控制自己触动了紧急阀门，造成燃气泄漏。在中共国全员90%以上接种疫苗的情况下，一切皆有可能。
 
-## **朝鲜——冬奥会上show，狮子大张口**
+新闻参考链接：[https://www.thepaper.cn/newsDetail\_forward\_16196263](https://www.thepaper.cn/newsDetail_forward_16196263)
 
-这个北朝鲜，它有两个根本不可能去参加冬奥会的条件。
+* * *
 
-第一、他是被奥林匹克给踢出去的，他要来参加这个会，首先奥林匹克得很不要脸的违反全世界的规则，他是被踢出奥林匹克会的，他怎么来参加呢？是吧？很多人忘了。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-第二、金正恩是真怕死，他是真怕被杀。他出回国动静很大，上次他出国是因为美国人给他担保，这个时候没人颠覆你，如果颠覆你，我就会怎么着怎么着，全世界给担保。这回谁给他担保啊？ 共产党给担保，他信吗？美国人要颠覆他，怎么办呢？这个安全需要，所以他很难。
 
-我们家这块儿有好多兔子窝。为啥冬天来了，找不着兔子了？因为兔子必须藏着，它太冷，是吧？ 我们可以出去，在雪地上打滚去。我们是人类，我们可以在这环境生存。他（金正恩）就像个兔子一样，只能呆在兔窝里边，就像蛇一样，只能冬眠。这是个常识。
+编辑：【英国伦敦喜庄园编辑部】
 
-还有一个，听说，给共产党要当狮子大张口：我要去参加冬奥会，三个条件。
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
-两个国给我担保：我所有的出行、交通，要美国人和中共都要答应，甚至俄罗斯都要出来参与。就是我这个国家，你保证没有事…..你怎么都负责。第3个事情，要100亿美元现金啊。
 
-你说我七哥今天一会儿直播完，我往雪里边滚两下子，我能跟兔子说，我给兔子盖个房子吗？我说不可能的。所以说这是个非常简单的问题，战友们要学会懂得国际规则。你们都是建国之人，这要懂得啊，谢谢猫本。
-
-文贵大直播2022.01.07-3:07:40
-
-## **法国——它需要一场革命，七哥文采要赏析**
-
-我觉得法国这个国家，它这次要付出沉重的代价，法国真的是很艰难，因为这个各种邪恶的力量，你现在到法国，真的是……
-
-十多年前到现在，很多人说法国这个破国家，原来我觉得这帮人无知，怎么说法国是破国家？
-
-这个国家真的是不可救药，这个国家真的已经到了完全变态的程度。种族歧视在法国远远高于美国百倍、千倍。各种种族冲突、宗教歧视在法国无处不在。而且它是个信仰自由的国家，它这种变态已经到了无法形容的程度。
-
-而这个国家政府的税和那种变态的思想、极左和极右之间那种矛盾。
-
-就像法国那整个香榭丽舍大道上的几千米。你看到法国人的那种傲慢，还有咖啡的飘香；还有到处狗屎和马屎之间的交汇，还有那个勾肩搭背出来所谓的巴黎的浪漫；对面的那整个的巴黎凯旋门的那种优美，和在夕阳西下的时候整个凯旋门那个浪漫、那个神奇，迎着对面是个破烂不堪极为庸俗的一个转轮。
-
-然后看着一个自由广场之间老掉牙的那个自由杯，然后你再看着突然间进去了现代的咖啡馆、老的咖啡馆、和穿着所谓已经穿了好几代人的绚丽的那个女人不露脚趾头的鞋，那种复杂混杂啊，那种感觉…..你在那想着想着这个国家完全没希望！
-
-我现在对法国就是半点水都不会流的，到那儿以后基本就干了啊！我就赶快要逃离那个国家。
-
-抢钱的、抢包的、傲慢的、无知的、讲着那种你听不懂法国人都听不懂的法语。后来人家告诉我那是乌干达语，我说这猴子。
-
-还有那个完全日趋直下的劣质咖啡的质量，在那个五星级酒店大堂里边，那些所谓的…告诉你：“我是法国出生的黑人”，“我是法国人，我是法国出生的黑人”无数次的被提醒，然后不给小费以后摔盘砸碗的那种德性啊！
-
-这个国家已经完全没希望，它需要一场革命！
-
-你再到罗浮宫看那个罗浮宫的自由和革命：露着胸，拿着枪。那个时候我就看过N多次了，我现在再看的时候我都觉得是笑话。
-
-法国人这么快就忘掉了自己付出鲜血换来的。我觉得密德朗总统一定在坟墓中每天都在哭泣。
-
-但是你们站出来很不容易啊，就像意大利一样啊，像比利时，像德国，整个欧洲处在了一个似苍鹰在脱甲、更新换代的时候。但这个是很危险很痛苦。最后我要告诉所有欧洲的战友们：你们一定要坚持挺住，很不容易啊！你们会很艰难，很不容易！谢谢。
-
-文贵大直播2022.01.07-3:01:30
-
-编辑：Mindy10
-
-出品：雅典娜农场速记组
 
  
 
