--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,119 +1,65 @@
 ---
-title: G时评第220期（1.7）直播摘要：北韩拒绝冬奥会/哈国暴乱幕后黑手
+title: 文贵直播大事记——朝鲜冬奥不出席，法国密德朗哭泣
 ---
-`GISELLE` [轉載自GNews](https://gnews.org/zh-hans/1834994/)
+`文贵直播大事记` [轉載自GNews](https://gnews.org/zh-hans/1835019/)
 
-摘要：霖霖霖
+国家篇
+![](https://assets.gnews.org/wp-content/uploads/2022/01/文贵直播大事记20220107国家-3.jpg)
+**【编者：内容摘录于文贵大直播，力求保持文贵先生话语的原汁原味，标记了直播日期和时间点，愿读者重温直播以获取更多信息**】
 
-校对：面包树
+[2022.01.07文贵大直播链接](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
 
-编辑：Giselle
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1.7.png)
-【话题】
+## **朝鲜——冬奥会上show，狮子大张口**
 
-- 朝鲜拒绝参加北京冬奥会
-- 瑞士移交银行客户资料
-- 网传新雅尔塔2.0协定
-- 哈国抗议演变成流血冲突
+这个北朝鲜，它有两个根本不可能去参加冬奥会的条件。
 
+第一、他是被奥林匹克给踢出去的，他要来参加这个会，首先奥林匹克得很不要脸的违反全世界的规则，他是被踢出奥林匹克会的，他怎么来参加呢？是吧？很多人忘了。
 
-【新闻1】
+第二、金正恩是真怕死，他是真怕被杀。他出回国动静很大，上次他出国是因为美国人给他担保，这个时候没人颠覆你，如果颠覆你，我就会怎么着怎么着，全世界给担保。这回谁给他担保啊？ 共产党给担保，他信吗？美国人要颠覆他，怎么办呢？这个安全需要，所以他很难。
 
-网坛名将德约科维奇，因为没有疫苗接种证明，被澳洲当局取消签证并关进隔离酒店。
+我们家这块儿有好多兔子窝。为啥冬天来了，找不着兔子了？因为兔子必须藏着，它太冷，是吧？ 我们可以出去，在雪地上打滚去。我们是人类，我们可以在这环境生存。他（金正恩）就像个兔子一样，只能呆在兔窝里边，就像蛇一样，只能冬眠。这是个常识。
 
-【解读】
+还有一个，听说，给共产党要当狮子大张口：我要去参加冬奥会，三个条件。
 
-1、澳网公开赛是网球四大满贯赛事之一，德约科维奇曾九次夺得[澳网公开赛](https://www.epochtimes.com/gb/tag/%E6%BE%B3%E7%BD%91%E5%85%AC%E5%BC%80%E8%B5%9B.html)冠军。此次被间接剥夺参赛资格，反响巨大。
+两个国给我担保：我所有的出行、交通，要美国人和中共都要答应，甚至俄罗斯都要出来参与。就是我这个国家，你保证没有事…..你怎么都负责。第3个事情，要100亿美元现金啊。
 
-2、德约科维奇前往墨尔本之前曾表示，他已获得维州当局免于接种疫苗的“医疗豁免”，也拿到了合法签证，却被澳洲边防执法局拒绝入境。
+你说我七哥今天一会儿直播完，我往雪里边滚两下子，我能跟兔子说，我给兔子盖个房子吗？我说不可能的。所以说这是个非常简单的问题，战友们要学会懂得国际规则。你们都是建国之人，这要懂得啊，谢谢猫本。
 
-3、事实证明，澳洲联邦与各州政策自相矛盾，墨尔本是整个澳洲封锁、疫苗强制最黑暗的城市。
+文贵大直播2022.01.07-3:07:40
 
-4、澳网1.17日开幕，目前徳约已向联邦巡回法庭提出申诉。如果德约胜诉，对于疫苗团伙将是一次有力的回击；如果德约败诉，势必在网球界，甚至全世界引起巨大反响，对于扩大反疫苗群体的影响力，都是利好。
+## **法国——它需要一场革命，七哥文采要赏析**
 
-【新闻2】
+我觉得法国这个国家，它这次要付出沉重的代价，法国真的是很艰难，因为这个各种邪恶的力量，你现在到法国，真的是……
 
-澳洲23岁举重运动员詹姆斯·康迪里奥斯在接种两针疫苗后，仍不幸感染病毒在悉尼死亡。
+十多年前到现在，很多人说法国这个破国家，原来我觉得这帮人无知，怎么说法国是破国家？
 
-【解读】
+这个国家真的是不可救药，这个国家真的已经到了完全变态的程度。种族歧视在法国远远高于美国百倍、千倍。各种种族冲突、宗教歧视在法国无处不在。而且它是个信仰自由的国家，它这种变态已经到了无法形容的程度。
 
-疫苗和病毒成了互为二元武器的关系。接种疫苗后更容易感染病毒，更容易变重症、死亡。打了疫苗后要非常警惕，避免感染病毒，积极预防，吃伊维菌素、青蒿素等。
+而这个国家政府的税和那种变态的思想、极左和极右之间那种矛盾。
 
-【新闻3】
+就像法国那整个香榭丽舍大道上的几千米。你看到法国人的那种傲慢，还有咖啡的飘香；还有到处狗屎和马屎之间的交汇，还有那个勾肩搭背出来所谓的巴黎的浪漫；对面的那整个的巴黎凯旋门的那种优美，和在夕阳西下的时候整个凯旋门那个浪漫、那个神奇，迎着对面是个破烂不堪极为庸俗的一个转轮。
 
-美国、法国、加拿大等国家，正在积极推动疫苗护照的普及。
+然后看着一个自由广场之间老掉牙的那个自由杯，然后你再看着突然间进去了现代的咖啡馆、老的咖啡馆、和穿着所谓已经穿了好几代人的绚丽的那个女人不露脚趾头的鞋，那种复杂混杂啊，那种感觉…..你在那想着想着这个国家完全没希望！
 
-【解读】
+我现在对法国就是半点水都不会流的，到那儿以后基本就干了啊！我就赶快要逃离那个国家。
 
-1、法国和加拿大等国政府，多次对未接种疫苗的民众施压，为未接种者设置更多限制，将他们排除在“生活的基本方面”之外，让未接种者更加举步维艰。
+抢钱的、抢包的、傲慢的、无知的、讲着那种你听不懂法国人都听不懂的法语。后来人家告诉我那是乌干达语，我说这猴子。
 
-2、疫苗护照可利用生物芯片等科技手段，进一步控制人类的生命和财产安全，如果我们现在不极力反抗，当疫苗护照被大面积成功推行之后，后果将不堪设想。
+还有那个完全日趋直下的劣质咖啡的质量，在那个五星级酒店大堂里边，那些所谓的…告诉你：“我是法国出生的黑人”，“我是法国人，我是法国出生的黑人”无数次的被提醒，然后不给小费以后摔盘砸碗的那种德性啊！
 
-【新闻4】
+这个国家已经完全没希望，它需要一场革命！
 
-瑞士联邦税务管理局已经向上百个国家和地区移交了相关银行客户资料，全球最大离岸中心瑞士，放弃了它延续了300多年的银行客户信息保密制度。
+你再到罗浮宫看那个罗浮宫的自由和革命：露着胸，拿着枪。那个时候我就看过N多次了，我现在再看的时候我都觉得是笑话。
 
-【解读】
+法国人这么快就忘掉了自己付出鲜血换来的。我觉得密德朗总统一定在坟墓中每天都在哭泣。
 
-1、由于美欧的持续施压，瑞士不得不放弃银行客户信息保密制度，这对恐怖分子、顶级富豪、犯罪团伙，尤其是中共盗国贼都是个天大的噩耗。
+但是你们站出来很不容易啊，就像意大利一样啊，像比利时，像德国，整个欧洲处在了一个似苍鹰在脱甲、更新换代的时候。但这个是很危险很痛苦。最后我要告诉所有欧洲的战友们：你们一定要坚持挺住，很不容易啊！你们会很艰难，很不容易！谢谢。
 
-2、瑞士严格的保密制度和中立立场，让它成为全球最大的私人财富管理中心，也是全球最安全的洗钱、藏钱天堂，为不义之财保驾护航长达300多年。
+文贵大直播2022.01.07-3:01:30
 
-3、瑞银妥协，意味着犯罪分子的藏宝洞已经不安全了，这些人会想办法把钱转移出来。
+编辑：Mindy10
 
-这个消息，本应带来数字货币的利好，但当天的比特币不涨反跌，显示资本在乱局当中，都想找一个安全的地方避险。当下唯一干净的、安全的资金池，只有喜联储。（Giselle补充：资本只是工具，本身并无属性，如果掌握在邪恶的一方，就能干坏事；如果掌握在正义的一方，就能干好事。）
-
-【新闻5】
-
-1月5日，朝鲜宣布不参加北京冬奥会，不允许个人运动员参赛，无情打脸中共。
-
-【解读】
-
-1、中共官媒称，朝鲜是因为没有参加2020年东京奥运会，而失去了参加冬奥会的资格。
-
-2、金正恩封锁边境，不让运动员出境参赛，表明了金正恩对中共严防死守、与中共划清界限的决心。
-
-3、朝鲜拒绝了中共提供的疫苗，也婉拒了欧美提供的疫苗，显示金正恩不愿对本国民众实施疫苗大屠杀。
-
-4、金正恩也是受害者，常年被媒体抹黑丑化，即使他想当一个正常人，也没有机会。从他不参合疫苗杀人就能看出，他尚未泯灭起码的良知。
-
-5、我们不要被主流媒体欺骗了，他处决的那些人，跟中共走得太近，是要密谋颠覆他的。当然，手段太残忍。金正恩对中共既恐惧又厌恶，才会做出如此极端的行为。
-
-6、独裁体制和假的民主体制，都是不好的。北韩周围群狼环伺，中共压在头顶，俄罗斯不肯援手，川普也失势了，金正恩没有太多选择。除非中共灭亡，欧美假的民主体制被推翻，北韩才有机会拥抱民主、自由、开放。
-
-【新闻6】
-
-网传新雅尔塔2.0协议将被签订。
-
-【解读】
-
-1，此雅尔塔2.0版本基本纯属胡扯，首先美国从阿富汗撤军不是为了对付中共和俄罗斯，尽管这个丢盔卸甲的撤离并不光彩，而且还给塔利班留下了很多精良的武器装备，但这是结束美国长期被战争这个无底洞吞噬国力的不得已的选择。
-
-2、对于黑暗的疫苗团伙来讲，中共就是妥妥的背锅侠，美、俄、中三方坐下来瓜分全球，基本上是不可能的。
-
-3、这篇文章的作者大卫.派恩，很可能是中共放出来打媒体战的，目的是干扰你的判断力，混淆视听。
-
-4、即使美国想这么干，俄罗斯也不见得会配合。当年的雅尔达会议诞生于“二战”末期，形势已经非常明朗。而目前，第三次世界大战还远远没有结束，“三战”非常特别，不是传统的国与国之间的战争，而是平民与精英、正义与邪恶、独裁与民主之间的战争，涉及面积非常广泛，几乎全球参与，还远远不到坐地分赃的时候。
-
-【新闻7】
-
-哈萨克斯坦和平抗议已经演变成流血冲突，伤亡人数正在上升，哈方已经向俄罗斯集安组织请求协助。
-
-【解读】
-
-1、哈方与俄罗斯的声明中，均使用了“外来势力煽动的结果、动用了训练有素的部队和借用武力，破坏国家和领土的完整”。这是剑指美国，还是剑指中共？
-
-2、在抗议发生后，哈萨克斯坦出现了全国性的互联网通信中断，这种手法没有中共配合，外部恐怖势力是无法做到的。
-
-3、打砸抢，将和平抗议演变成暴力革命的目的何在？
-
-4、究竟谁是恐怖分子？王毅前脚刚刚离开，哈国就爆发了暴乱。谁在哈国的利益最大？谁最害怕被清算？
-
-5、中共是哈国暴力冲突最大黑手，目的是制造分裂，推翻现任政府，扶持一个新的傀儡，维护纳扎尔巴耶夫和中共盗国贼的利益。
-
-（文章内容仅代表G时评个人观点）
-
-本期链接：https://www.gtv.org/video/id=61d81f0af2fe0449ea1987ab
+出品：雅典娜农场速记组
 
  
 
