--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,46 +1,97 @@
 ---
-title: 有声&#124;古以色列亡国启示录
+title: 法官驳回FDA对疫苗数据75年的拖延，削减至仅8个月
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1834962/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1834973/)
 
-配音：香草山福音部 – Daxia
+![](https://assets.gnews.org/wp-content/uploads/2022/01/16416131281.png)图片来自Injecting Freedom博客截图
+《零对冲》1月6日报道，代表该案原告的律师亚伦·西里（Aaron Siri）通过他的博客Injecting Freedom提供了这个惊人的最新信息：
+
+我的事务所代表客户要求食品药品管理局（FDA）出示辉瑞公司为许可其新冠疫苗提交的所有数据。FDA要求法院允许仅以每月500页的速度提交，这将需要75年以上的时间才能提交所有文件。
+
+我很高兴地报告，一名联邦法官断然拒绝了FDA的要求，并命令FDA以每月55,000页的速度提供所有数据！
+
+这是透明度方面的巨大胜利，并消除了联邦“卫生”当局对独立科学家提供解决方案和解决当前疫苗计划严重问题所需数据所套上的束缚之一 ——这些问题包括免疫力下降，逃避疫苗免疫力的病毒变种，以及正如CDC所证实的那样，疫苗并不能阻止传播。
+
+任何人都不应该被胁迫进行不必要的医疗程序。虽然政府通过接种新冠疫苗强制令侵犯了这一基本自由权利已经够糟糕的了，但政府还希望通过拖延完全提交许可其产品所依赖的凭据来隐藏数据，直到今天还活着的每个美国人都几乎死掉。这种治理形式破坏了自由，与民主社会所要求的开放性背道而驰。
+
+在下令及时发布这些文件时，法官认识到这些数据的发布对公众至关重要，应该是FDA的最高优先事项之一。然后，他恰当地引用了詹姆斯·麦迪逊（James Madison）的一句话：“一个没有大众信息或获取信息的手段的民众政府，只不过是一场闹剧或悲剧的序幕”，以及约翰·肯尼迪（John F. Kennedy）的解释：“一个害怕让人民在公开市场上判断真假的国家是一个害怕其人民的国家。”
+
+以下是法官命令的全文：（其副本也可在**[此处](https://www.sirillp.com/wp-content/uploads/2022/01/ORDER_2022_01_06-9e24e298ae561d16d68a3950ab57077b.pdf)**获得）
+
+UNITED STATES DISTRICT COURT 美国地方法院
+
+PHMPT, Plaintiff v. FDA, Defendant, No. 4:21-cv-1058-P
+
+医学博士（原告） 起诉美国食品药品管理局（被告），编号4:21-cv-1058-P
+
+ORDER 命令
+
+This case involves the Freedom of Information Act (“FOIA”). Specifically, at issue is Plaintiff’s FOIA request seeking “[a]ll data and information for the Pfizer Vaccine enumerated in 21 C.F.R. § 601.51(e) with the exception of publicly available reports on the Vaccine Adverse Events Reporting System” from the Food and Drug Administration (“FDA”). See ECF No. 1. As has become standard, the Parties failed to agree to a mutually acceptable production schedule; instead, they submitted dueling production schedules for this Court’s consideration. Accordingly, the Court held a conference with the Parties to determine an appropriate production schedule.[1] See ECF Nos. 21, 34.
+
+本案涉及《信息自由法》（“FOIA”）。具体而言，本案的争议在于原告的信息自由法申请，要求食品和药物管理局（“FDA”）提供“21 C.F.R. § 601.51（e）中列举除了在疫苗不良事件报告系统已公开的辉瑞疫苗的所有数据和信息”。参考ECF第1号。作为标准，双方未能就提交时间表达成一致。相反，他们提交了对立的提交时间表供本院审议。因此，法院与双方举行了一次会议，以确定适当的提交时间表。[1] 参考ECF 第 21、34 号。
+
+“Open government is fundamentally an American issue” – it is neither a Republican nor a Democrat issue.[2] As James Madison wrote, “[a] popular Government, without popular information, or the means of acquiring it, is but a Prologue to a Farce or a Tragedy; or, perhaps, both. Knowledge will forever govern ignorance: And a people who mean to be their own Governors, must arm themselves with the power which knowledge gives.”[3] John F. Kennedy likewise recognized that “a nation that is afraid to let its people judge the truth and falsehood in an open market is a nation that is afraid of its people.”[4] And, particularly appropriate in this case, John McCain (correctly) noted that “[e]xcessive administrative secrecy . . . feeds conspiracy theories and reduces the public’s confidence in the government.”[5]
+
+“开放政府从根本上说是一个关乎全美国人的问题”——它既不是共和党的问题，也不是民主党的问题。[2] 正如詹姆斯·麦迪逊所写，“一个没有大众信息或获取信息的手段的民众政府，只不过是一场闹剧或悲剧的序幕；或者，也许两者兼之。知识将永远支配着无知：一个想要为自己做主的民族，必须用知识赋予的力量武装自己。[3] 约翰·肯尼迪同样意识到，“一个不敢让人民在公开市场上判断真假的国家，就是一个害怕人民的国家。”[4] 而且，在本案中特别恰当的是，约翰·麦凯恩（John McCain）（正确地）指出，“过度的行政保密……助长了阴谋论，降低了公众对政府的信心。”[5]
+
+Echoing these sentiments, “[t]he basic purpose of FOIA is to ensure an informed citizenry, [which is] vital to the functioning of a democratic society.” NLRB v. Robbins Tire & Rubber Co., 437 U.S. 214, 242 (1977). “FOIA was [therefore] enacted to ‘pierce the veil of administrative secrecy and to open agency action to the light of public scrutiny.’” Batton v. Evers, 598 F.3d 169, 175 (5th Cir. 2010) (quoting Dep’t of the Air Force v. Rose, 425 U.S. 352, 361 (1976)). And “Congress has long recognized that ‘information is often useful only if it is timely’ and that, therefore ‘excessive delay by the agency in its response is often tantamount to denial.’” Open Soc’y Just. Initiative v. CIA, 399 F. Supp. 3d 161, 165 (S.D.N.Y. 2019) (quoting H.R. REP. NO. 93-876, at 6271 (1974)). When needed, a court “may use its equitable powers to require an agency to process documents according to a court-imposed timeline.” Clemente v. FBI, 71 F. Supp. 3d 262, 269 (D.D.C. 2014).
+
+与这些观点相呼应，“信息自由法的基本目的是确保公民的知情权，这对民主社会的运作至关重要”。美国劳工局诉罗宾斯轮胎和橡胶公司案437 U.S. 214, 242（1977）。“[因此]颁布信息自由法是为了‘刺破行政保密的面纱，将机构的行动置于公众的监督之下’。巴顿诉埃弗斯，598 F.3d 169, 175（第五巡回法院2010）（引用美国空军部诉罗斯， 425 U.S. 352, 361（1976））。以及“国会早就认识到，‘信息往往只有在及时的情况下才有用’，因此‘机构在回应中的过度拖延往往等同于拒绝’。”开放社会正义组织诉中央情报局， 399 F. Supp.3d 161, 165（纽约南区2019）（引自H.R. REP. NO. 93-876， at 6271 （1974））。必要时，法院“可以利用其衡平法权力，要求机构按照法院规定的时间表处理文件”。克里门特诉FBI， 71 F. Supp.3d 262, 269（哥伦比亚特区地区法院2014）。
+
+Here, the Court recognizes the “unduly burdensome” challenges that this FOIA request may present to the FDA. See generally ECF Nos. 23, 30, 34. But, as expressed at the scheduling conference, there may not be a “more important issue at the Food and Drug Administration . . . than the pandemic, the Pfizer vaccine, getting every American vaccinated, [and] making sure that the American public is assured that this was not [] rush[ed] on behalf of the United States . . . .” ECF No. 34 at 46. Accordingly, the Court concludes that this FOIA request is of paramount public importance.
+
+在此，法院认识到该信息自由法请求可能给FDA带来“不适当的负担”挑战。一般见ECF第23、30、34号。但是，正如在日程安排会议上所表达的，在食品和药物管理局可能没有比大流行病、辉瑞公司的疫苗更重要的问题了，让每个美国人都接种疫苗，[并确保]美国公众确信这不是代表美国的仓促行为……”参考ECF No. 34 于46。因此，法院的结论是，这一信息自由法请求具有极其重要的公共意义。
+
+“[S]tale information is of little value.” Payne Enters., Inc. v. United States, 837 F.2d 486, 494 (D.C. Cir. 1988). The Court, agreeing with this truism, therefore concludes that the expeditious completion of Plaintiff’s request is not only practicable, but necessary. See Bloomberg, L.P. v. FDA, 500 F. Supp. 2d 371, 378 (S.D.N.Y. Aug. 15, 2007) (“[I]t is the compelling need for such public understanding that drives the urgency of the request.”). To that end, the Court further concludes that the production rate, as detailed below, appropriately balances the need for unprecedented urgency in processing this request with the FDA’s concerns regarding the burdens of production. See Halpern v. FBI, 181 F.3d 279, 284–85 (2nd Cir. 1991) (“[FOIA] emphasizes a preference for the fullest possible agency disclosure of such information consistent with a responsible balancing of competing concerns . . . .”).
+
+“陈旧的信息是没有什么价值的。”佩恩公司诉美利坚合众国，837 F.2d 486, 494（华盛顿特区法院1988）。法院同意这一不言而喻的道理，因此得出结论，认为迅速完成原告的请求不仅是可行的，而且是必要的。见彭博有限合伙企业诉FDA，500 F. Supp. 2d 371, 378（纽约南区2007年8月15日）（“正是对这种公众理解的迫切需求推动了该请求的紧迫性”）。为此，法院进一步得出结论，如下文所详述的提交率，适当地平衡了处理这一请求的空前紧迫性与FDA对提交负担的担忧。见哈尔彭诉FBI案，181 F.3d 279, 284-85（第二巡回法院1991）（“[信息自由法]强调，在负责任地平衡各种相互竞争的问题的前提下，倾向于让机构尽可能全面地披露此类信息……”
+
+Accordingly, having considered the Parties’ arguments, filings in support, and the applicable law, the Court ORDERS that:
+
+因此，在考虑了双方的论点、支持性文件和适用法律后，法院命令：
+
+1. The FDA shall produce the “more than 12,000 pages” articulated in its own proposal, see ECF No. 29 at 24, on or before January 31, 2022.
+
+一、FDA应在2022年1月31日或之前提供其自身提案中阐述的“12,000多页文件”，见ECF第29号第24页。
+
+2. The FDA shall produce the remaining documents at a rate of 55,000 pages every 30 days, with the first production being due on or before March 1, 2022, until production is complete.
+
+二、FDA应以每30天55,000页的速度提供剩余文件，第一次提供应在2022年3月1日或之前完成，直到提供完毕。
+
+3. To the extent the FDA asserts any privilege, exemption, or exclusion as to any responsive record or portion thereof, FDA shall, concurrent with each production required by this Order, produce a redacted version of the record, redacting only those portions as to which privilege, exemption, or exclusion is asserted.
+
+三、如果FDA对任何对应记录或其部分主张任何特权，豁免或排除，FDA应在本命令所要求的每次提供的同时，出示记录的编辑版本，仅编辑那些主张特权，豁免或排除的部分。
+
+4. The Parties shall submit a Joint Status Report detailing the progress of the rolling production by April 1, 2022, and every 90 days thereafter.[6]
+
+四、双方应在2022年4月1日前提交一份联合状况报告，详细说明滚动提交的进展情况，此后每隔90天提交一次。[6]
+
+SO ORDERED on this 6th day of January, 2022.
+
+本命令于2022年1月6日发布。
+
+**简评：**这将是对美国食品药品管理局试图隐瞒疫苗黑幕行动的一次迎头痛击，同时向外界披露了他们企图侵蚀自由的野心，以及与疫苗公司和医药巨头们的勾结。美国国父们所警示的危险正逐渐成为现实，邪恶势力试图捂住人们的眼睛嘴巴，世界正急需为正义发声的媒体。无论食品药品管理局试图掩饰什么，此地无银三百两的丑态终将被公之于众。
+
+新闻链接：[https://www.nationandstate.com/2022/01/06/judge-rejects-fdas-75-year-delay-on-vax-data-cuts-to-just-8-months/](https://www.nationandstate.com/2022/01/06/judge-rejects-fdas-75-year-delay-on-vax-data-cuts-to-just-8-months/)
+
+[https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)
+
+博客链接：[https://aaronsiri.substack.com/p/instead-of-fdas-requested-500-pages](https://aaronsiri.substack.com/p/instead-of-fdas-requested-500-pages)
+
+翻译/简评：Dlrow
+
+PR：clau
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E6%96%B0.png)
-估计许多基督徒都曾有个疑问：既然以色列人是创造天地万物至高神的选民，神为什么会让祂选民的国度灭亡，让以色列人被外族人掳去呢？我们今天就来简单地回顾一下以色列人的那段亡国史，看看神给我们的启示。
+编辑：【英国伦敦喜庄园编辑部】
 
-神带领以色列人从埃及为奴之地出来进入奶蜜之乡后，他们却很快犯罪堕落，不再专心信靠带他们出埃及的神，反而去拜人手造的偶像。对神的话和公义律法“不听不理，人人凭自己顽固的恶念行事。”（耶利米书 11:8）因此神说：“我要使约中的一切咒诅临到他们，因为我吩咐他们遵守这约，他们却拒绝遵守。”（耶利米书 11:8）
-
-北国灭亡前神指控他们说：“他们为了银子卖掉义人，为了一双鞋子卖掉穷人。（阿摩司书 2:6）北国灭亡时神又指证以色列人的祭司和官长说：“你们像设在米斯巴的圈套，铺在他泊山的网罗。（何西阿书 5:1）”可见北国以色列那时候败坏到了什么地步，同胞之间彼此算计，彼此利用和出卖。在长期不悔改的情况下，于是神就只好降罚，让亚述帝国灭了他们的国，把他们掳走了。
-
-南国也是差不多，神指证他们说“虔敬人已从大地上灭绝，世间再没有正直人。人人伺机杀人流血，用网罗猎取自己的弟兄。（弥迦书 7:2）神让巴比伦王去灭亡南国的时候说到自己不得不这样做的原因“我要把他们的妻子和田地交给别人，因为他们无论贵贱，个个贪图不义之财；无论是先知还是祭司，都行为诡诈。（耶利米书 8:10）”
-
-因为南国的罪恶，神要求他们臣服在巴比伦王的权势之下，以求生存，接受神的管教。结果南国却背誓毁约不肯臣服。最后神只好让巴比伦王彻底攻灭南国，让他们被掳到巴比伦。因为一个彻底败坏的国，在神眼前已失去了存在的意义，神必须用苦难来炼净和管教他的子民，用强力使他们停止作恶，使他们重新归向神，认识神，在神面前谦卑下来并重新切实遵行神的教诲。就像神亲自说的“因为锈垢太厚，就是用火也不能清除。耶路撒冷啊，淫荡使你污秽不堪，我要洁净你，你却不愿被洁净。所以，除非我向你倾尽一切愤怒，否则你的污秽将不能清除。（以西结书 24:12-13）”
-
-神对自己的选民如此做，是因为至高的父神是一位具有公义圣洁、爱和怜悯、不收受贿赂、不偏待人等一切美善的神，祂更是一位会降罚管教自己的儿女的神。此外，作为造物主，神的主权大而可畏，祂掌管一切，世间的一切都是按父神的旨意运行。正如祂在《圣经》里说的“谁成就了这事？谁在太初就掌管历史的方向？是我耶和华，我太初就在那里，末了也在那里。（以赛亚书 41:4）”
-
-神让以色列人的这些历史发生，其实都是为了向祂所拣选的儿女显明自己，让祂的儿女认识祂，敬畏祂，并学习祂的儿子耶稣基督。因为神让“万事互相效力，叫爱　神的人得益处（罗马书 8:28）”
-
-犹大人被掳70年之后，他们在被掳之地痛悔地寻求神，最后神开恩实现祂对犹大人的应许，让他们回到故土重建家园和圣殿。如今，我们华人也是被中共掳掠73年了。希望我们全体华人真的都来痛悔地寻求神，跟随爆料革命，解散中共，重归故土，重建我们的家园和圣殿。让神州真的成为敬拜赞美神的地方。愿神光照华人的心，阿门。
-
-文字版原文：[古以色列亡国启示录](https://gnews.org/zh-hans/1825527/)
-
-音频处理：喜山必胜Maverick
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
