--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,9 +1,9 @@
 ---
-title: 居家隔离的西安居民大声呼喊：“我要吃饭！”
+title: 诺瓦克·乔科维奇因疫苗接种豁免被拒在澳洲被拘留
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1834828/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1834830/)
 
-01/03/2022 居家隔离的西安居民大声呼喊：“我要吃饭！”
+01/06/2022 ABC新闻：世界最优秀的男子网球运动员诺瓦克·乔科维奇，因他的疫苗接种豁免被拒绝而被拘押在澳大利亚并且被取消签证。尽管他的律师团队正为他留在澳大利亚而努力，他是否能参加澳网公开赛仍然是个迷。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
