--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,38 +1,45 @@
 ---
-title: 2022年中共国的主旋律
+title: 维多利亚州记录了创记录51,356例新病例
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835399/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1835436/)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/2022年中共国的主旋律.png)uulucky.com
+**【雅典娜快讯】，紧贴时代脉搏**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-477.png)图片来源：Newspostalk
+**整理报道：文泓**
 
+当地时间1月8日，近一周的快速抗原检测纳入每日数据后，澳大利亚维多利亚州在过去24小时内记录了庞大的51,356例新增病例和9例新冠病毒死亡。
 
-作者：顺其自然
-编辑：Mttfly
+截至周六早上，维州医院共有731名感染者，其中109人在重症监护室，22人在呼吸机上。在过去的24小时内，有9人死于该病毒。
 
-中共特爱说主旋律，现在就给大家捋一捋2022年中共国的主旋律。
+周六的总病例数是周五的两倍多——**这是迄今为止大流行期间任何州记录的最高单日病例数**，这要归功于快速检测。在新病例中，通过快速抗原检测记录了26,428例，通过PCR检测记录了24,928例。
 
-首先，肯定是印钱。卖地收入、税收越来越少了。花钱的地方，只多不少。军队要保，蓝金黄要继续，“非洲兄弟”的钱要接着给。否则各国的政客、精英就要找中共算病毒的账。“非洲兄弟”翻起脸来可不是闹着玩的。权贵的奢靡生活要保，退休金要保，教师、公务员的工资即使少发也要保。中共别无选择，只能印钱。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-478.png)图片来源：Covid 19 Data（当前各州疫情数据变化）
 
-其次，是斗地主。中共国这四十来年的改革开放，富了一大批的贪官、企业、富豪、明星艺人和网红等。斗这些人，既有政治斗争的需要，也有填补财政亏空的需要。既能排除异己，又能缓解经济问题。类似于和珅跌倒，嘉庆吃饱。
+“我们不希望维州人认为病毒传播一夜之间翻了一番”，州卫生部长马丁·弗利说：“根据我们现在在系统中形成的周未报告的数据，（新增）数字肯定显著飙升。”
 
-北周开国皇帝宇文泰问他的谋臣苏绰：“国何以立？”苏绰答：“具官。”宇文泰问：“如何具官？”苏绰答：“用贪官，反贪官。”这样有三个好处。一、以权换忠心。想让别人为你卖命就必须有好处，你并没有那么多钱，只好给权。让他用手中的权去搜刮民脂民膏，这些贪官为了保住自己的好处，他就拼命维护你的政权，江山不就巩固了吗？二、以反贪为名，消除不听你话的贪官，保留听话的贪官。这样可以消除异己、巩固你的权力。官吏只要贪污，把柄就在你的手中。三、让贪官当替罪羊，化解仇恨。当用太多贪官而招惹时，那就要加大宣传力度，祭起反贪大旗，把责任都推到贪官的身上。为民伸冤的同时，再把他搜刮的民财放进自己的腰包。所以贪腐，一直是维护江山的必要手段。反贪，是贪腐一个必要的表演环节。
+弗利先生说，包括快速抗原测试使该州能够更准确地了解总体数字以及应该在哪里分配资源。他补充说，随着过去一周的报告不断涌入，自我报告系统将需要一些时间来反映前一天的真实病例数。
 
-以贪反贪，中国已经用了两三千年了。很多人义愤填膺追问这么多年为什么没发现这些贪官，早年又是谁提拔的贪官？要知道在一个人治而不是法治的社会中，人员是提拔而不是选举；上下级其实是人身关系上的附属；贪污指数，就是忠诚指数的生动体现。不贪，不能得以提拔。不贿，不能得以重用。最后猪养肥了，就杀了，只是现在因为经济比较发达，不仅是贪官来搜刮老百姓的钱财。富豪、明星、艺人、网红都在用各种手段来搜刮老百姓兜里的钱。2021年，杀了很多肥猪；2022年，杀的肥猪会更多。
+大多数报告快速抗原检测呈阳性的人，在本周早些时候得到了这个结果，并在周五州卫生部门的网络表格打开时报告了这个结果。
 
-然后，某些边缘地区的县城乡镇会出现打白条现象，类似于上世纪八九十年代那样。在上世纪八九十年代，农业税一般要占到县城财政收入的40%左右，其中一部分还要上交。再加上当时物价上涨，国家开始逐步的调整工资，调整工资的钱要由县里出，但是只调整名义工资不发钱，被很多人戏称为“空调”。当时县财政还有一句话叫“八月十五见光明”，意思是到秋收了，县里才有点儿钱。平时就是到处借钱用，县以下的基层陷入开支困境。所以，当时各县乡镇由于财力紧张或者资金被挪用，购买农民销售农产品常常无钱支付，买粮就打白条，买烟也打白条。农民眼巴巴的盼着这个钱给孩子交学费、看病、买盐、打酱油，结果县里或者是乡里就给你一个白条儿。现在各地房地产不行了，没有大型企业的地方乡镇，在2022年肯定还会出现打白条的现象。
+维多利亚州是第一个建立报告系统的大陆州，在该系统中，**任何检测出快速抗原检测呈阳性的人现在都被视为可能感染****新冠病毒****，必须立即隔离****7****天并通知他们的接触者**——就像那些在PCR检测呈阳性的人一样（参加）测试。
 
-再次，是加税。之前说过持有股权、股票、合伙企业财产份额的，权益性投资的，个人独资企业、合伙企业、明星艺人、网红直播的劳务报酬所得的、个体工商户经营所得的都将成为征税对象。逐步取消个人所得税核定征收，查账征收在2022年全面实施。随着税率改变，这些人要加大交税力度了。再有2022年房地产税也会在某些城市试点，遗产税也会走向立法进程。之前挣得钱都慢慢的交给国家交给党吧。
+必须通过周五开放的在线门户或电话向卫生部报告阳性快速检测结果。目标是确保人们在测试中心花费更少的时间，并专注于隔离和从感染病毒中恢复。
 
-最后，就是减少岗位。因为财政没钱了，所以某些财政困难的县市就会裁员，减少岗位。其实这些年已经裁掉一些了，比如各地方电视台、电台。中共把这些都推给了市场，赚不到钱就关门倒闭。2022年，类似的事将不断发生。
+这也意味着在快速抗原测试的检测结果为阴性，且不是家庭接触者的维州人将能够立即恢复生活，而不是在等待阴性结果时进行隔离。
 
-在中国历史上一直有一个词叫轻徭薄赋，但历朝历代基本没有实施，反倒是横征暴敛盛行。财政没钱，有些有罚款权力的部门又会大规模出动，交警、卫生、环保……都会为自己的部门去创收。倒霉的只有老百姓。
+此前，维多利亚州在周五记录了21,728例病例和6例死亡病例，并且新规则生效以应对奥密克戎变种病毒的传播。
 
-2022年，会是更加难熬的一年。
+根据修订后的限制，维多利亚州的营业场所将被要求保持每2平方米1个人的密度限制，以限制新冠病毒的传播。
 
-*发布：Mttfly*
+重返办公室的时间也将延长，“强烈建议”维州人继续在家学习和工作，直到澳大利亚国庆日。
 
-**
-****更多资讯，请关注：
+目前，维州18岁以上超过15%或800,000人接种了第三剂疫苗，超过93%的符合条件的维州人都接种了疫苗。
+
+新闻链接：[Covid Melbourne cases: Victoria records 51,356 new infections, restrictions, rapid tests | news.com.au — Australia’s leading news site](https://www.news.com.au/national/victoria/news/victoria-records-51356-new-cases-nine-deaths/news-story/5d72d74f0121dd8b7bbc29566cd4a513)
+
+*发布：盘古相聚*
+
+**更多资讯，请关注：****
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
