--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,48 +1,21 @@
 ---
-title: 踏雪留痕
+title: 每时每刻的认知 （六）
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1835142/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1835243/)
 
-作者：香草山农场教育部 – 雨过天晴Rainbow
+投稿人：春风秋雨
+![](https://assets.gnews.org/wp-content/uploads/2022/01/863A58D1-D0FC-4C15-B4D5-6798DA4ED0A9.jpeg)图片来自战友
+每时每刻的认知，追随文贵先生，加入爆料革命让我们每位战友，在这病毒疫苗灾难中知道真相，传播真相。
 
+Covid病毒疫苗灾难已经悄悄的开始，民众在无法防备之中，在Omicron病毒无情的肆虐之中，仍旧去相信政府说辞。就在前不久，美国国家健康研究院对中共病毒患者进行研究，44名中共病毒患者完整的尸检表明，从急性感染到症状出现后的7个多月，中共病毒在肺部之外，还广泛分布于整个人体包括大脑，甚至是死于无症状或者轻度中共病毒患者也是如此。美国名医彼得.麦卡洛最新病毒和Covid疫苗研究也指出：Omicron病毒是通过空气传播，会在鼻子和喉咙中停留3天，然后向下移动到肺部。 不停的病毒疫苗，慢慢来临的灾难，可又有多少人能明白清醒呢？
 
+Covid-19病毒、Delta病毒、Omicron病毒，各种的病毒让世人已经麻痹已经精疲力尽，各种的危机也在蠢蠢欲动，如何防范如何保护自己。早在2021年12月19日文贵先生大直播中，文贵先生根据爆料革命科学家的爆料，就阐述了：“感染过中共病毒的人，无论年龄大小，若无后续排毒治疗，有50%概率患上淋巴系统和免疫系统的癌症，因为中共病毒一旦感染，病毒不局限于呼吸系统，病毒会遍布全身，从而引发各种急性和慢性、有症状和无症状的炎症和疾病，迫使淋巴系统和免疫系统长期超负荷工作，导致癌症”的说法。对世人又一次提前警告。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/logo-5-768x103-6.jpg)
+美国名医彼得.麦卡洛最新病毒和Covid疫苗研究同时指出：必须保持喉咙和鼻子清洁。每天预防性冲洗两次，早期治疗时最多每4个小时就要冲洗一次，降低病毒载量减轻病情。如此的巧合，文贵先生因为花粉过敏，早在2020年就开始每日清洗鼻子，自从中共开始释放病毒，文贵先生每次大直播都告诫战友们“要注意清洗鼻子，出门回来要洗手洗鼻子。”
 
-
-
-2022年美国东北部的第一场大雪悄然而来，晨曦未露，疫情期间继续坚持晨练的妹夫已经身现海傍公园的长堤并留下他小跑过后的一步步雪印。压腿、跑步、单杠引体向上、双杠前后空翻、倒立是他每天的基本锻炼项目。
-珍惜自己的健康，因为一旦自己倒了，所有的家人朋友，所有的财富，所有的爱恨情仇都将成为浮云！ 这是他对中共释放病毒入侵世界后的切身感受。文贵先生的话：“今天你健身了吗？”每天都在提醒着他。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/16x9-feature-photos-MOS-logos.png)
-这张微信传来的相片令居家工作的我，停下手头上的工作，驻足玻璃门窗旁往外观雪。光秃秃的树上一夜间开出了茸茸雪花，院子里的大小花盆也装满不同式样的冰淇淋，周围各家各户的门前盖上了10英寸的雪融被⋯⋯，下雪了！
-以往的雪后可见左邻右舍大人小孩一起合力铲雪，问候声、笑声连连。时而会走来一群小孩子问需要帮忙铲雪吗？随着他们发出兴奋的欢叫声，你会猜测到屋主家给予他们一个可观的报酬⋯⋯！而今寂静的街道上，只见偶尔驶过一辆铲雪车却不见行人。家家户户门前停着私家车。眼前苍凉景象让我不禁感叹遐想：对面临街窗户的背后同样会闪过忧郁的眼神吗？
-入夜后，一阵视频通话铃声响起，接通后凭借着微暗的路灯，小孙子高兴地让我看他在自己家院子里滑雪。看着在雪地上欢乐踏雪的身影和被滑板压出的一道道雪痕，我的眼眶湿润了⋯⋯！
-中共灭绝人寰地释放中共病毒，变本加厉制造并推进疫苗伤害，破坏剥夺民众正常的工作生活模式，威胁破坏世界经济秩序，妄想实现它那统治称霸世界的野心。但中共犯下的所有罪恶印记都将暴露在民主正义的阳光下！
-2022年的第一场瑞雪虽被中共病毒掩盖了往年嬉戏弄雪的乐趣和兴奋，可我有幸见证爆料革命的奇迹，跟随文贵先生一路走来并留下一串坚实的足迹👣⋯⋯！
-愿灾难早日消失，还天下仓生安宁！
-God bless you and your family！
-
-编辑/校对/发稿：为真不破20
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-82.png)
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 You****Tube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/09/GNEW-GTV-MOS-LOGO-2-2-1-1-400x54-1.jpeg)
-
-
+文贵先生是上天派下来保护世人的使者，我们全球的战友们是文贵先生坚定的追随者。在文贵先生引领下的新中国联邦，肩负着巨大使命。让我们不忘初心，坚持不懈加入爆料革命，用行动参与其中，完成这伟大的使命，拯救世界。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+发稿：MG6
 
  
 
