--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,37 +1,33 @@
 ---
-title: 中共国的污染对中国男性健康的摧残
+title: 美国法院下令FDA每月公开55000页辉瑞疫苗数据
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1835091/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1835129/)
 
-精神健康，食物健康、环境健康，是绝定男人头发少或多的最根本原因。
+#### 撰稿：日本东京方舟农场  海星
 
-【郭先生直播摘要】** 2022.1.1 **性与水与男性的健康，** CCP**污染对中国男性健康的摧残
+![](https://assets.gnews.org/wp-content/uploads/2022/01/FA151F87-10BF-47DB-82CF-392A3E380ECF.jpeg)（图片来源：零对冲）
 
-**郭先生**
+据《零对冲》1月7日报道，美国律师亚伦·西里（Aaron Siri）在其博客上披露，法院已下令要求食品和药品监督管理局（FDA）每月公开55000页辉瑞公司申请批准疫苗的文件数据。
 
-共产党那些老流氓他总是恨不得， 生下来就给人家蓝金黄去，就给人家上玉米地去。 他让别人一辈子不去玉米地，这是何种的变态呀。 Eglise说的话你看我记住了没有， 这水和一生的关系实际是很大。 文霄看我你跟你七哥一样， 头发都不多了。 你这也是水少的原因， 你知道水多了头发就会很旺，长得就比Ruth这样的头发比这神奇女孩多， 比她们都长， 你简单说说。 你这一生你遇到过水多过吗兄弟? 你遇到过吗? 你现在也没遇到过吧。
+亚伦律师之前代表其客户要求FDA对外公开辉瑞公司申请批准新冠（中共病毒）疫苗时提交的所有数据。然而，FDA却向法院提出每月只公布500页数据的要求。若按照此要求，辉瑞疫苗的申请许可资料将需要超过75年的时间才能全部公开。
 
-你没尝过这快乐吧， 你知道为啥中国男人头发都普遍比较少吗? 你说说这啥关系？ 就水和男人的头发有什么关系啊兄弟？
+亚伦律师兴奋地表示，联邦法官拒绝了FDA的要求，并下令其提高效率，每月对外公开55000页辉瑞疫苗的数据。这意味着只需要8个月的时间，民众就能查阅到辉瑞疫苗的所有数据。
 
-**文霄****:**
+《零对冲》的报道指出，此案件的判决将为科学家解决当前疫苗产生的严重问题提供必要的数据，同时消除联邦政府卫生部对科学家研究疫苗问题的禁锢。
 
-七哥我是从小头发从来就没多过，哈哈哈不是后掉的，先天长的。
+据报道，法官在下令FDA及时公布这些文件时表示，对外公开这些数据对公众至关重要，它应该是FDA的最高优先事项之一。 这位法官引用詹姆斯·麦迪逊的话指出：“如果公民没有得到信息，或者没有获取信息的手段，人民的政府就只不过是一场闹剧或悲剧的序幕。”
 
-**郭先生**
+法官同时还引用了约翰·肯尼迪的名言强调：“一个不敢公开信息让人民判断真假的国家，是一个害怕人民的国家。”
 
-就是好几代了， 就属于好几代受害的。
+*参考链接：[Judge Rejects FDA’s 75 Year Delay On Vax Data, Cuts To Just 8 Months](https://www.zerohedge.com/covid-19/judge-rejects-fdas-75-year-delay-vax-data-cuts-8-months)*
 
-**文霄**** **
+* * *
 
-刚才就是文紫战友说的这句话我想再补充一句，我自己不是医生，但是我妈妈是医生。然后我家里亲戚医生特别多，就是国内这个，现在你问医生啊，这个医患关系紧张很大的问题。就是医生也很不高兴，患者也很不高兴，谁都不高兴。然后这个医生的这个工作强度也很大，然后这个就是跟经济挂钩也很紧。 所以说这个这个不可能有，有那么强的生育欲望。
+*素材采编：海星*
 
-**郭先生**
+*编辑：青衣青青*
 
-谢谢文肖兄弟说对了，我告诉你，这不是七哥乱说你们都是医生，七哥不能信口开河。中国对男性的健康做过调查，英国人平均寿命68岁，法国人平均78岁，意大利、西班牙都平均78岁到80岁，但到了德国就60多岁，连比利时都70多岁，原因很简单，英国人喝啤酒，德国人喝啤酒。德国人、英国人吃的是脂肪油。还有工作压力大，天气没那么好，所以德国、英国人度假往西班牙，冬季到那块去找水去。
-
-而且这几个国家，人家性生活普遍比德国、英国，都要大概多十倍以上，而且吃的是橄榄油，喝的是红酒，所以喝啤酒，吃猪肉，吃脂肪是不好的。 阳光少是不好的， 那么这些国家地方呢。这几个国家普遍男人头发， 比英国、德国男人头发多的多还长， 所以精神健康， 食物健康、环境健康。 是绝定男人头发少或多的最根本原因， 兄弟啊咱们都是几代人被害呀。 爹的头发很年轻时候也都少了， 你知道了吗? 我也是，所以被害，害二代，我头发也都没那么多，是吧？
-
-视频剪辑：北方信使 |听写：烟波浩淼 | 翻译：Arthur | 校对：Polaris | 视频制作+字幕：刀锋舞者 | 编辑&发布：断播
+*发布：miumiu*
 
  
 
