--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,35 +1,30 @@
 ---
-title: 哈萨克斯坦动乱的真正原因是什么？
+title: 白宫亚洲事务高官批评习近平对外胁迫扩张对内集权专政
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835025/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1835077/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+#### 撰稿：日本东京方舟农场  幽蘭自得
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/哈萨克斯坦动乱.jpeg)新闻来源：直新闻
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2B475ABA-7144-4D1A-879B-0912BD71E323.jpeg)美国白宫国家安全委员会印太事务协调员库尔特•坎贝尔(Kurt Campbell)
+（图片来自美联社）
 
+白宫负责亚洲事务的最高官员坎贝尔近日批评中共国国家主席习近平对外在印太地区推行胁迫性扩张政策；对内破坏中共“后毛泽东时代”建立的集体领导体系要素，不断集权，独断专行。
 
-编译：小红帽
+据《美国之音》1月7日报道，白宫国家安全委员会印太事务协调员库尔特·坎贝尔（Kurt Campbell）1月6日表示，今天的中共国在全球舞台上地位的上升得益于勤劳的中国人民，而美国的帮助也发挥了关键作用。但在过去的几年中，在习近平的领导下，中共国针对澳大利亚采取了胁迫性经济措施；在南中国海、东中国海、台湾海峡以及沿印度边界，中共都采取了更大胆和危险的军事行动；此外，中共国还在欧洲进行更为激进的战狼外交。
 
-根据《国家利益》1月7日报道， 本周初，哈萨克斯坦西部的扎瑙岑镇爆发了大规模抗议活动，表面上看是由燃料价格的大幅上涨引发的。
+坎贝尔指出，习近平上台后在印太地区的所作所为表明，其正在日益破坏二战后国际社会在亚洲建立起来的正常秩序。中共国在许多情况下俨然已成为一个修正主义大国，正以与印太地区其他国家利益背道而驰的方式，寻求改变体系以有利于中共国。
 
-哈萨克斯坦总统卡西姆·乔马尔特·托卡耶夫（Kassym-Jomart Tokayev）最初以安抚的方式做出回应，对燃料和其他商品实施临时价格管制，但抗议活动迅速升级为全国紧急状态。哈萨克斯坦各地的政府大楼和警察局遭到袭击和纵火，该国最大的机场被短暂接管。
+此外，坎贝尔还指出，在过去的十年里，习近平还分解了中共集体领导体系的大部分要素，将越来越多的权力掌握在他手中。在高度集权之下，习近平获得不同意见和建议的能力使中共国的制度变得更加不可预测和复杂。中共国目前的制度使之本质上已成为一个由习近平个人眼界和观点来管理及指导的极其复杂的国家。
 
-据报道，至少有18名哈萨克斯坦安全人员被政府描述为外国训练的“恐怖团伙”杀害。抗议者的全部目的仍不确定。最近，扎瑙岑的几千名抗议者提出了被《华盛顿邮报》称为 “迄今为止最具体的要求清单”，包括将托卡耶夫赶下台，扩大对公民权利的保护，以及恢复被认为更加民主的1993年版哈萨克斯坦宪法。但是，目前还不清楚这些特定人群的要求是否可以被解读为整个抗议运动目标的准确代表。
+*参考链接： [坎贝尔：习近平对外胁迫扩张 对内集权专断](https://www.voachinese.com/a/white-house-campbell-us-china-relations-xi-jinping-taiwan-20220106/6385949.html)*
 
-据称，**哈萨克斯坦官员与中国相关人员合作，有效地封锁了所有互联网接入，以阻止抗议者组织起来。**北京当局是哈萨克斯坦能源行业的主要投资者，在整个抗议活动期间，北京发表声明，对托卡耶夫给予强烈的支持。
+* * *
 
-中国领导人习近平表示：“中国愿意向哈萨克斯坦提供必要的支持，帮助哈萨克斯坦渡过难关。无论遇到什么风险和挑战，中国都是哈萨克斯坦值得信赖的朋友和可靠的伙伴。”
+*素材采编：幽蘭自得*
 
-新闻来源：[What’s Really Behind the Unrest in Kazakhstan? | The National Interest](https://nationalinterest.org/feature/what%E2%80%99s-really-behind-unrest-kazakhstan-199243)
+*编辑：青衣青青*
 
-*发布：小红帽*
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+*发布：miumiu*
 
  
 
