--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,27 +1,65 @@
 ---
-title: 从筷子谈中西方文化差异
+title: 文贵直播大事记——朝鲜冬奥不出席，法国密德朗哭泣
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1834986/)
+`文贵直播大事记` [轉載自GNews](https://gnews.org/zh-hans/1835019/)
 
-大秦朝到最后的大清朝愚民文化，把文明彻底的给断了层。而西方文明跟随了逻辑文化， 完了就是今天的科学 。
+国家篇
+![](https://assets.gnews.org/wp-content/uploads/2022/01/文贵直播大事记20220107国家-3.jpg)
+**【编者：内容摘录于文贵大直播，力求保持文贵先生话语的原汁原味，标记了直播日期和时间点，愿读者重温直播以获取更多信息**】
 
-**【郭先生直播摘要】 2022.1.1 从筷子谈中西方文化差****异**
+[2022.01.07文贵大直播链接](https://gtv.org/video/id=61d83b3ef2fe0449ea199bd5)
 
-**郭先生：**
+## **朝鲜——冬奥会上show，狮子大张口**
 
-筷子，中国的筷子看着没有，阴阳。他是阴阳的，阴阳放了在五个手指头里边金木水火土。就是整个中国人的文明的最根本的起源和逻辑思维。而西方是1加1 等于2，中国1加1两个筷子等于11。1加1等于11，中国人是完全是个包饺子文化。
+这个北朝鲜，它有两个根本不可能去参加冬奥会的条件。
 
-是阴阳，他是天理，天文学说是中国发明很早的。但是主要是在，特别大清朝以后，大秦朝到最后的大清朝愚民文化，就是商鞅五策。把文明彻底的给断了层，断了代，而西方文明跟随了逻辑文化。完了就是今天的科学，严格讲真的美国人是什么？
+第一、他是被奥林匹克给踢出去的，他要来参加这个会，首先奥林匹克得很不要脸的违反全世界的规则，他是被踢出奥林匹克会的，他怎么来参加呢？是吧？很多人忘了。
 
-宇宙无限大，他是在把沙子里的事搞明白了，地球上他把沙子搞明白了。中国人把宇宙搞明白了，但是把沙子给忘了，所以说东西方文明之间如果是相合。他的刀和叉就是逻辑的开始，切掉、夹住、放嘴里。而且有不同的地方有不同的吃法，他是完全是逻辑学，这就是科学。就是当下的科学，那么中国是阴阳，这阴阴阳事大了去了是吧？
+第二、金正恩是真怕死，他是真怕被杀。他出回国动静很大，上次他出国是因为美国人给他担保，这个时候没人颠覆你，如果颠覆你，我就会怎么着怎么着，全世界给担保。这回谁给他担保啊？ 共产党给担保，他信吗？美国人要颠覆他，怎么办呢？这个安全需要，所以他很难。
 
-就是男女，黑白天，我们这两个文化实际不是矛盾，但可悲的是，中国的先进的文明，被西方的科学所替代。这就看到中国的所谓哲学，中国的和科学之间巨大的矛盾，说中国人只有嘴巴上的巨人 ，行动上是侏儒，西方人是行动上的巨人，但精神上不见得多高。
+我们家这块儿有好多兔子窝。为啥冬天来了，找不着兔子了？因为兔子必须藏着，它太冷，是吧？ 我们可以出去，在雪地上打滚去。我们是人类，我们可以在这环境生存。他（金正恩）就像个兔子一样，只能呆在兔窝里边，就像蛇一样，只能冬眠。这是个常识。
 
+还有一个，听说，给共产党要当狮子大张口：我要去参加冬奥会，三个条件。
 
+两个国给我担保：我所有的出行、交通，要美国人和中共都要答应，甚至俄罗斯都要出来参与。就是我这个国家，你保证没有事…..你怎么都负责。第3个事情，要100亿美元现金啊。
 
+你说我七哥今天一会儿直播完，我往雪里边滚两下子，我能跟兔子说，我给兔子盖个房子吗？我说不可能的。所以说这是个非常简单的问题，战友们要学会懂得国际规则。你们都是建国之人，这要懂得啊，谢谢猫本。
 
+文贵大直播2022.01.07-3:07:40
 
-视频剪辑：北方信使 | 听写：烟波浩淼 | 翻译：精糧 |校对：Arthur |视频制作+字幕：CG. |编辑&发布：闪电训练
+## **法国——它需要一场革命，七哥文采要赏析**
+
+我觉得法国这个国家，它这次要付出沉重的代价，法国真的是很艰难，因为这个各种邪恶的力量，你现在到法国，真的是……
+
+十多年前到现在，很多人说法国这个破国家，原来我觉得这帮人无知，怎么说法国是破国家？
+
+这个国家真的是不可救药，这个国家真的已经到了完全变态的程度。种族歧视在法国远远高于美国百倍、千倍。各种种族冲突、宗教歧视在法国无处不在。而且它是个信仰自由的国家，它这种变态已经到了无法形容的程度。
+
+而这个国家政府的税和那种变态的思想、极左和极右之间那种矛盾。
+
+就像法国那整个香榭丽舍大道上的几千米。你看到法国人的那种傲慢，还有咖啡的飘香；还有到处狗屎和马屎之间的交汇，还有那个勾肩搭背出来所谓的巴黎的浪漫；对面的那整个的巴黎凯旋门的那种优美，和在夕阳西下的时候整个凯旋门那个浪漫、那个神奇，迎着对面是个破烂不堪极为庸俗的一个转轮。
+
+然后看着一个自由广场之间老掉牙的那个自由杯，然后你再看着突然间进去了现代的咖啡馆、老的咖啡馆、和穿着所谓已经穿了好几代人的绚丽的那个女人不露脚趾头的鞋，那种复杂混杂啊，那种感觉…..你在那想着想着这个国家完全没希望！
+
+我现在对法国就是半点水都不会流的，到那儿以后基本就干了啊！我就赶快要逃离那个国家。
+
+抢钱的、抢包的、傲慢的、无知的、讲着那种你听不懂法国人都听不懂的法语。后来人家告诉我那是乌干达语，我说这猴子。
+
+还有那个完全日趋直下的劣质咖啡的质量，在那个五星级酒店大堂里边，那些所谓的…告诉你：“我是法国出生的黑人”，“我是法国人，我是法国出生的黑人”无数次的被提醒，然后不给小费以后摔盘砸碗的那种德性啊！
+
+这个国家已经完全没希望，它需要一场革命！
+
+你再到罗浮宫看那个罗浮宫的自由和革命：露着胸，拿着枪。那个时候我就看过N多次了，我现在再看的时候我都觉得是笑话。
+
+法国人这么快就忘掉了自己付出鲜血换来的。我觉得密德朗总统一定在坟墓中每天都在哭泣。
+
+但是你们站出来很不容易啊，就像意大利一样啊，像比利时，像德国，整个欧洲处在了一个似苍鹰在脱甲、更新换代的时候。但这个是很危险很痛苦。最后我要告诉所有欧洲的战友们：你们一定要坚持挺住，很不容易啊！你们会很艰难，很不容易！谢谢。
+
+文贵大直播2022.01.07-3:01:30
+
+编辑：Mindy10
+
+出品：雅典娜农场速记组
 
  
 
