--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,24 +1,52 @@
 ---
-title: 美最高法院大法官索尼娅否认新冠法规是疫苗强制令
+title: 魁北克省媒体造势——应该查出谁未接种疫苗
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1835182/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1835256/)
 
-#### 撰稿：黄金精神
+2022-01-07
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-471.png)**图片来源：nbc news**
-1月8日据福克斯（Fox News）报道，最高法院法官索尼娅·索托马约尔（Sonya Sotomayor）在周五就拜登政府关于职业安全与健康管理局（OSHA）概述的新冠法规辩论的听证会上，积极地回击了”疫苗强制”一词。
+编译及评论：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-472-edited.png)图片来源：TVA新闻，TVA NOUVELLES， 2022 年 1 月 6 日
+**这是一个颠倒的世界，我们的整个生活都受到了影响**
 
-索尼娅在口头辩论中说：”新法规里没有提出任何要求。没有人要求强制接种疫苗。这是完全不同的东西。我不知道国会还能比651号文件更清楚多少。”
+TVA新闻（TVA NOUVELLES，让·拜尔拉贡Jean Baillargeon， 战略传播顾问，Expert-conseil en communication stratégique， 2022 年 1 月 6 日）发表题为《让我们筛查并限制未接种疫苗的人》的文章称，这是一个颠倒的世界，仅仅因为 10% 的成年人拒绝接种疫苗，我们限制了 90% 的人口。魁北克省政府公布，未接种疫苗的人占重症监护住院患者的 75%, 占正常住院患者的 50%，我们的整个生活都受到了影响。魁北克省战略传播顾问，让·拜尔拉贡（Jean Baillargeon）在文章提议，筛查出未接种疫苗的人应该是我们现在要做的首要事项。只有这样才能平息那些已经接种了两剂（针）或三剂（针）疫苗的，处于长达两年封锁状态的人们的普遍不满。我们已经到了零容忍的阶段，必须强制接种疫苗。
 
-这似乎是在挖掘一种说法，即由于该强制令允许用每周测试来代替强制性疫苗接种，因此它不是强制的。职业安全与健康管理局表示，这是其疫苗接种和测试紧急临时标准（ETS）的一部分，该标准涵盖拥有100名或以上雇员的雇主。索尼娅称，ETS要求所涵盖的雇主建立、实施和执行书面的强制性新冠疫苗接种政策；但对于那些建立、实施和执行书面政策要求未接种疫苗的雇员每周接受新冠测试并在工作场所戴口罩而不是接种疫苗的雇主除外。
+**征收****“****疫苗税****”****，限制公共服务的使用**
 
-代表全国独立企业联合会（the National Federation of Independent Business）的斯科特·凯勒（Scott Keller）认为，OSHA法规最初是为了保护工作者不受未接种疫苗的同事的影响而通过的，现在由于 “CDC的指导意见与法规的基本假设相矛盾”，已经过时了。
+魁北克省政府很快会针对未接种疫苗的人群采取进一步措施。一些政客提议针对医疗费用征收“疫苗税”。另一些人则希望采取措施限制某些公共服务的使用，例如魁北克省酒业协会 (SAQ) 或魁北克省大麻协会(SQDC) 要求在入口处出示疫苗接种护照。
 
-索尼娅迅速回击说：”是的，这可能是事实，但我们现在的死亡人数是未被压缩的，感染新冠使人们在非常时期内无法工作。而且已经有消息证实：在某些行业，如医疗行业，当疫苗被强制要求时这里没有强制要求接种疫苗，但有口罩强制令，在我看来这与疫苗强制令并没有区别。”
+**未接种疫苗的人是谁？他们的资料未知**
 
-**[新闻来源](https://www.foxnews.com/politics/sotomayor-denies-biden-rule-vaccine-mandate-despite-osha-language)**
+这些未接种疫苗的人是谁？我们可以使用魁北克省医疗健康保险卡查出这些未接种疫苗的人的社会经济背景吗？魁北克省医疗健康保险卡准确记录了每个人的疫苗接种情况并生成了疫苗接种护照。他们是一个人住在家里，孤零零的老人家吗？他们是不懂我们的语言，并且需要社区支持和帮助的新移民吗？是出于宗教信仰反对接种疫苗的某些社区成员吗？他们来自哪个地区？他们来自什么社会经济背景？
 
+**筛查未接种疫苗的人应该是我们现在要做的首要事项**
+
+最后，我们能否一开始就简单地确定一下截至 2022 年 1 月 5 日因 COVID-19 住院的 1600 名患者和 185 名重症监护患者的概况？根据政府的百分比，因此目前有 800 名未接种疫苗的住院患者（50%）和 138 名未接种疫苗的患者在重症监护室？筛查出这几百个未接种疫苗的人应该是我们现在要做的首要事项。只有这样才能平息那些完全接种者处于长达两年封锁状态的普遍不满。
+
+**或者接种疫苗或者强制收费？在所有公共服务中都要求出示疫苗接种护照**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-473-edited.png)**在所有公共服务中都要求出示疫苗接种护照**
+我不是公共卫生法方面的专家，但我相信我们已经到了零容忍的阶段，必须强制接种疫苗。尽管未接种疫苗的人完全有权拒绝接种疫苗，但他们必须承担后果，因为这是他们的选择，当然，医疗例外（可以接受医疗服务）。
+
+染上COVID-19 变种的人就像酒后驾车，会导致他人死亡。迄今为止，该病毒已导致魁北克省 11,000 多人、加拿大 35,000 多人和全球 550 万人死亡。
+
+一般来说，接种疫苗的人可能会感染病毒，但他们感染病毒的可能性较小，而且病情会较轻。然而，未接种疫苗的人如果被感染，病情会更严重，住院风险会更大。我们应该参照一些国家的方法，比如新加坡和奥地利，要想结束对90%人口的大范围限制，我们先限制（10%）未接种疫苗的人。如何？例如在所有公共服务中都要求出示疫苗接种护照，如果他们不遵守这个规则就对他们处以罚款；未接种疫苗的人如果被感染并住院，应当向他们收取住院医疗费用。这是一个公平、正义和负责任的社会。
+
+**未接种疫苗的人将无法再进入 SAQ 和 SQDC的所有的分支机构**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-474-edited.png)**魁北克省酒业协会 (SAQ)，图片来源：TVA新闻，TVA NOUVELLES， 2022 年 1 月 6 日**![](https://assets.gnews.org/wp-content/uploads/2022/01/image-476-edited.png)**魁北克省大麻协会(SQDC)和两位年轻的大麻消费者，图片来源：TVA新闻，TVA NOUVELLES， 2022 年 1 月 6 日**
+蒙特利尔日报（吉纳维芙·拉乔伊GENEVIÈVE LAJOIE 2022 年 1 月 6 日星期四 10:44）还报道，从 1 月 18 日起，未接种疫苗的人将无法再进入魁北克省酒业协会 SAQ （一家政府垄断的公司，其职责是在魁北克省全境经销酒精饮料）和魁北克省大麻协会 SQDC （SAQ 的子公司，其职责是管理魁北克省全境的大麻销售）的所有的分支机构。魁北克省很快还将对美发沙龙等其他非必要业务实施疫苗护照。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-475-edited.png)**如果未接种疫苗的人无法再进入SQCD，他们会去黑市（les gens va aller march noir）。两位年轻的大麻消费者说，“（会去黑市）便宜很多，没有税（bien moin chere, pas de tax）”。**
+文章编译及评论人提醒读者，邪恶势力自始至终没有忘记甩锅，嫁祸，威胁，恐吓未接种疫苗的人们。在针对未接种疫苗的人群而采取的不得已的措施——宵禁令，出台后，魁北克省政府开始请求联邦援助，部署加拿大武装部队军人和士兵，旨在促进魁北克省的疫苗接种运动大规模和快速地进行。魁北克省政府还会针对未接种疫苗的人群采取更多的其它措施。病毒仍在传播，疫情正在爆发，大家必须格外小心，特别是参加新中国联邦和爆料革命的未接种疫苗的人一定要更加小心。
+
+每逢佳节倍思亲，全球的战友们大家新年好。魁北克省的战友们，晚上一定要在十点前回家，违者罚款起价最低一千加元。
+
+**参考资料**：
+
+1. TVA新闻，TVA NOUVELLES，让·拜尔拉贡Jean Baillargeon， 战略传播顾问，Expert-conseil en communication stratégique，2022 年 1 月 6 日下午，12:08, «Dépistons et confinons les non-vaccinés», [https://www.tvanouvelles.ca/2022/01/06/depistons-et-confinons-les-non-vaccines-1](https://www.tvanouvelles.ca/2022/01/06/depistons-et-confinons-les-non-vaccines-1)
+2. 蒙特利尔日报，Le Journal De Montreal，吉纳维芙·拉乔伊GENEVIÈVE LAJOIE 2022 年 1 月 6 日星期四 10:44, Les non-vaccinés refusés à la SAQ et à la SQDC dès le 18 janvier, [https://www.journaldequebec.com/2022/01/06/les-non-vaccines-refuses-a-la-saq-et-la-sqdc-quebec-songe-a-imposer-le-passeport-vaccinal-dans-les-salons-de-coiffure](https://www.journaldequebec.com/2022/01/06/les-non-vaccines-refuses-a-la-saq-et-la-sqdc-quebec-songe-a-imposer-le-passeport-vaccinal-dans-les-salons-de-coiffure)
+
+
+校对发布：MQ
+![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
