--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,30 +1,27 @@
 ---
-title: 白宫亚洲事务高官批评习近平对外胁迫扩张对内集权专政
+title: 巴西出现首个因奥密克戎死亡病例 生前已接种
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1835077/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1835122/)
 
-#### 撰稿：日本东京方舟农场  幽蘭自得
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-下午1.40.24.jpg)巴西出现首个因奥密克戎死亡病例 生前已接种 网络图片
+据俄罗斯卫星通讯社1月7日暨巴西新闻网站G1报道，巴西出现首个因感染奥密克戎毒株后死亡的病例。死者68岁，生前患有高血压和慢性肺病，接种过3剂疫苗。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2B475ABA-7144-4D1A-879B-0912BD71E323.jpeg)美国白宫国家安全委员会印太事务协调员库尔特•坎贝尔(Kurt Campbell)
-（图片来自美联社）
+打脸了吧？撒谎成性的左媒和疯狂的疫苗推进者、杀人凶手们，不是说疫苗有效吗？不是说打了疫苗，就算感染也不会得重症吗？这位患者打了三针疫苗，不仅感染了，还死了。全球防不胜防的奥密克戎，哪种疫苗能防住？人民不觉醒、不起来反抗，杀戮不会停止。
 
-白宫负责亚洲事务的最高官员坎贝尔近日批评中共国国家主席习近平对外在印太地区推行胁迫性扩张政策；对内破坏中共“后毛泽东时代”建立的集体领导体系要素，不断集权，独断专行。
-
-据《美国之音》1月7日报道，白宫国家安全委员会印太事务协调员库尔特·坎贝尔（Kurt Campbell）1月6日表示，今天的中共国在全球舞台上地位的上升得益于勤劳的中国人民，而美国的帮助也发挥了关键作用。但在过去的几年中，在习近平的领导下，中共国针对澳大利亚采取了胁迫性经济措施；在南中国海、东中国海、台湾海峡以及沿印度边界，中共都采取了更大胆和危险的军事行动；此外，中共国还在欧洲进行更为激进的战狼外交。
-
-坎贝尔指出，习近平上台后在印太地区的所作所为表明，其正在日益破坏二战后国际社会在亚洲建立起来的正常秩序。中共国在许多情况下俨然已成为一个修正主义大国，正以与印太地区其他国家利益背道而驰的方式，寻求改变体系以有利于中共国。
-
-此外，坎贝尔还指出，在过去的十年里，习近平还分解了中共集体领导体系的大部分要素，将越来越多的权力掌握在他手中。在高度集权之下，习近平获得不同意见和建议的能力使中共国的制度变得更加不可预测和复杂。中共国目前的制度使之本质上已成为一个由习近平个人眼界和观点来管理及指导的极其复杂的国家。
-
-*参考链接： [坎贝尔：习近平对外胁迫扩张 对内集权专断](https://www.voachinese.com/a/white-house-campbell-us-china-relations-xi-jinping-taiwan-20220106/6385949.html)*
+新闻参考链接：[https://sputniknews.cn/20220107/–1036983826.html](https://sputniknews.cn/20220107/--1036983826.html)
 
 * * *
 
-*素材采编：幽蘭自得*
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-*编辑：青衣青青*
 
-*发布：miumiu*
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
