--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,24 +1,49 @@
 ---
-title: 朝鲜拒绝参加北京冬奥会 中共不得不表示“理解”
+title: 播客巨星乔·罗根助力,盖特新增一百万新用户
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835075/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1835121/)
 
-撰稿：东京樱花团/小小星
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-24.jpg)[图片来源](https://ucpnz.co.nz/2022/01/07/%E6%9C%9D%E9%B2%9C%E6%AD%A3%E5%BC%8F%E5%91%8A%E7%9F%A5%E7%BC%BA%E5%B8%AD2022%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A5%E4%BC%9A%E3%80%80%E4%B8%AD%E5%9B%BD%E5%A4%96%E4%BA%A4%E9%83%A8%E8%A1%A8%E6%80%81/)
-据朝中社1月7日报道，朝鲜奥委会和体育省向中共奥委会、北京2022年冬季奥运会及冬季残疾人奥运会组委会、中国国家体育总局致信函。
+#### 【雅典娜观察】和你一起探究世界
 
-信函称，朝鲜虽不能参加本届奥运会，但朝鲜将全方位支持和声援中国要举办一届隆重精彩的奥运盛会的一切事宜。信函表示，朝鲜坚信兄弟的中国人民和运动员将战胜一切妨碍活动和困难，成功举办北京冬奥会。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/gm-2.jpg)图片来源：墨尔本雅典娜农场设计组
 
-对于朝鲜这个小弟不参加冬奥会，中共内心恼怒，面上还得应付，因为一开骂就更加暴露自己的众叛亲离，只能表示感谢和理解！
 
-信息来源：
+#### 整理报道：文扬
+编辑：文泓
 
-[朝鲜：因全球疫情等原因无法参加北京冬奥会](https://news.sina.com.cn/c/2022-01-07/doc-ikyakumx8799639.shtml)
+当地时间1月7日，据《华盛顿邮报》报道，前总统川普顾问杰森·米勒的社交媒体应用盖特（Gettr），在播客巨星乔·罗根加入后的几天内，已有超过100万新用户完成注册。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+根据盖特公司与《邮报》独家分享的数据，作为一个吸引保守派用户替代推特的社交媒体，盖特在周五上午（近一周下载量）达到了100万次大关，这距离罗根周日在该网站上发表第一篇文章还不到一个星期。据盖特发言人埃博尼·鲍登说，这使得该网站的用户总数超过了400万。
 
+目前，播客巨星罗根仍然保留着一个推特账户，他加入盖特是因为担心推特审查制度，因为推特周日禁止了佐治亚州众议员马乔里·泰勒·格林账户，称她多次分享关于新冠疫苗的错误信息。在被禁之前，泰勒·格林在推特上说，“大量的冠状病毒疫苗死亡事件被（政府）忽视”，并呼吁食品和药物管理局不要批准冠状病毒疫苗。
+
+“为了预防万一——在推特变得更蠢以前，我现在也在这里了。让我们欢呼吧！”罗根在他的第一个盖特帖子中写道。
+
+仅在1月3日，盖特注册用户就达到了343,000，这是该网站自7月推出以来的最大单日注册量。鲍登说，罗根加入该网站，盖特没有支付费用。
+
+在米勒没能争取到唐纳德·川普（加盟）之后，罗根的加入是盖特及时的胜利。而川普在去年10月表示，他计划推出自己的网站，名为真相（TRUTH Social）。
+
+然而，迄今为止，“真相”开局并不顺利。川普团队说，测试版将在11月上线，然后在2022年第一季度更广泛地发布。但据媒体报道，该网站的多个光秃秃的测试版已在网上泄露，让黑客和记者能够挖出川普自己的用户名。
+
+**“真相”**的挣扎使得盖特足以吸引其潜在的用户。最近几周，包括作家乔丹·彼得森、政治评论员戴夫·鲁宾和《纽约邮报》专栏作家卡罗尔·马科维奇和萨莱娜·齐托在内的其他保守派人士也加入了该网站。
+
+对于保守派来说，该网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。然而，该网站不允许公开的白人至上主义，最近还禁止了白人民族主义“团结右翼”组织者尼克·富恩特斯（加入）。
+
+同时，盖特也在向海外扩张。截至周五，该公司称其在美国有220万用户，其次是巴西的50万用户，以及在英国、德国和法国的重要用户群。相比之下，推特在美国拥有约7800万日活跃用户，在全球拥有2.06亿。
+
+米勒对《邮报》说：“**这些数字证明，社交媒体用户开始对硅谷高管日益严厉的审查制度有所觉醒，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。**”
+
+**盖特从郭文贵家族控制的投资基金处获得了资金。郭文贵是一名成功的商人，自****2014****年逃离中国，与前总统川普顾问史蒂夫·班农关系密切。**据米勒称，该公司还有其他未透露姓名的支持者，截至9月，已经筹集了约7500万美元的资金。
+
+原文链接： [Joe Rogan helps Gettr amass a million new users (nypost.com)](https://nypost.com/2022/01/07/joe-rogan-helps-gettr-amass-a-million-new-users/)
+
+**发布：文泓**
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
