--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,23 +1,311 @@
 ---
-title: 2022年中共国将有100万辆汽车芯片缺口
+title: 郭文贵先生接受 HBO Vice 采访的真相
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1835074/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1835120/)
 
-撰稿：东京樱花团/盐和光
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-86.jpg)[图片来源](https://auto.economictimes.indiatimes.com/news/auto-components/chip-shortage-to-cost-automakers-110-billion-in-revenues-in-2021-alixpartners/82625724)
-新浪财经1月7日报道，据香港《南华早报》网站报道，根据世界最大汽车市场的行业联合会预测，随着全球芯片短缺迫使规模较小的汽车制造厂暂停生产，中国蓬勃发展的电动汽车行业可能会在一定程度上陷入冻结。据中国乘用车市场信息联席会（CPCA）说，全球芯片代工厂能够生产足够中国400万辆新能源汽车使用的半导体、单片机和带有人工智能处理器的高端芯片。因此，根据CPCA对2022年中国新能源汽车需求的预测，将出现100万辆汽车的芯片缺口。
+[https://gtv.org/video/id=61d8f991dffab035958c13d8](https://gtv.org/video/id=61d8f991dffab035958c13d8)
 
-随着CCP病毒和疫苗灾难在世界肆意横行，扰乱了几家芯片代工厂的生产，从而加剧了对2021年第3季度已经吃紧的半导体供应链的压力。中共国开始受到供应链中断的冲击。而与此同时，中共政府正鼓励车主放弃汽油动力汽车，改用纯电动汽车、插电式混合动力汽车和燃料电池汽车，以帮助中共政府在2060年实现碳中和目标。预计今年新能源汽车销量将翻倍，从2020年的117万辆增至240万辆。
+**郭文贵
+Miles Guo**
 
-缺乏现代科学知识的人，被中共独裁者洗脑的国人眼里只有悠久的传统文化，认为自家源远流长的传统文化是世界上最先进的，盛产“小粉红”的地方是不会有芯片的。
+问题是没有很多证据支持你的观点
+El problema es que no hay muchas evidencias que apoye tu punto
 
-信息来源：
+例如 新冠病毒是中共实验室制造的
+Por ejemplo, que el COVID-19 es elaborado en el laboratorio del PCCh
 
-[芯片短缺有多严重？港媒：中国电动汽车行业可能“陷入冻结”](https://my.mbd.baidu.com/r/zhd7j7xHNK?f=cp&amp;rs=1851166628&amp;ruk=fAjvTKDNA9tzZXQ7Zje4kQ&amp;u=f6e1346face3c6b5)
+目的是消灭大量人口
+El objetivo es acabar con un gran número de personas
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+但这也是为了宣传你所说的…
+Pero esto es también por hacer promover lo que dijiste
+
+伊莎贝拉 你是（新冠病毒）专家吗？
+Isabella ¿tú eres experta (del coronavirus)?
+
+你知道新冠病毒吗？
+¿Tu sabes del coronavirus?
+
+知道什么是新冠病毒吗？
+¿Sabes qué es el coronavirus?
+
+你什么都不知道 对吧？
+No sabes nada ¿cierto?
+
+这就是为什么你们媒体可以批判…
+Esto es por qué ustedes los medios pueden criticar
+
+这就是为什么你们能在美国大选问题上代表美国人民
+Esto es por qué ustedes pueden representar al pueblo estadounidense en el problema de las elecciones
+
+你们可以随便给输赢下定论
+Ustedes pueden sacar conclusiones a su voluntad sobre la victoria o la derrota
+
+但你们不能代表（冠状病毒）专家
+Pero ustedes no pueden representar al experto (del coronavirus)
+
+你不是专家
+Tu no eres especialista
+
+你的媒体也不是专家
+Tu medio de comunicación tampoco es especialista
+
+你连冠状病毒起码的常识都没有
+Tu no tienes ni el mínimo conocimiento básico sobre el coronavirus
+
+即使你想在这个问题上做专访
+Así tu quieras hacer una entrevista en este problema
+
+你也得先花10年时间去学习冠状病毒
+También debes gastar 10 años aprendiendo del coronavirus
+
+这就是为什么你们这样的记者是如此可笑
+Esto es por qué reporteros como ustedes tan ridículos
+
+你从来不知道什么是冠状病毒
+Tu nunca sabes qué es el coronavirus
+
+从来不知道P3实验室在做什么
+Nunca sabes qué hace el laboratorio P3
+
+P4实验室在做什么
+Qué hace el laboratorio P4
+
+你知道他们在哪吗？
+¿Sabes dónde están ubicados?
+
+看到过（P4实验室）墙上写着的潘多拉盒子吗？
+¿Has visto en la pared (laboratorio P4) tenga escrito caja de Pandora?
+
+你看见全世界有百万专家相信病毒不是源于自然吗？
+¿Has visto que los millones de científicos en el mundo creen en que el virus no viene de la naturaleza?
+
+我不想讲太多细节
+No quiero hablar de tantos detalles
+
+如果我要讲能讲10个小时
+Si hablo puedo durar más de 10 horas hablando
+
+(2020年) 一月分中共说病毒不是人造
+En enero (2020) el PCCh dijo que el virus no es creado por el hombre
+
+是源于自然
+Proviene de la naturaleza
+
+他们说没有人传人
+Ellos dicen que no se contagia persona a persona
+
+可防可控
+Es prevenible y controlable
+
+仅仅一周之后我们就在直播里说病毒没有得到控制
+Apenas una semana después dijimos en la transmisión en vivo que el virus no estaba bajo control
+
+一定有人传人
+Seguro se transmite de persona a persona
+
+一定会全球大爆发
+Seguro habrá una explosión global
+
+随后仅仅一周习近平就改口说存在人传人
+En la semana siguiente, Xi Jinping cambió sus palabras y dijo que había transmisión de persona a persona
+
+疫情已失控
+La pandemia ha salido del control
+
+这是常识
+Esto es conocimiento básico
+
+如果中共没有制造冠状病毒
+Si el PCCh no creó el virus
+
+他们就对世卫组织和美国人说 请（来调查）吧
+Entonces ellos deben decirle a la OMS y a los estadounidenses, por favor (investigue)
+
+他们就会邀请你们HBO去武汉调查
+Ellos los invitará a ustedes HBO a Wuhan para investigar
+
+但为什么他们不允许你们去呢？
+¿Pero por qué ellos no les permite ir?
+
+我要跟你讲的事情你根本不懂得什么叫冠状病毒
+Lo que te voy a hablar no entiendes en lo absoluto qué es el coronavirus
+
+跟你讲冠状病毒跟你讲月亮一样 你根本不懂的
+Hablarte del coronavirus es como hablarte de la luna, no lo vas a entender
+
+武汉实验室为什么不邀请你去采访呢？
+¿Por qué el laboratorio de Wuhan no te invita a que entrevistes?
+
+你怎么不去采访武汉实验室呢？
+¿Por qué no vas y entrevista al laboratorio de Wuhan?
+
+既然不是共产党做的
+Ya que no es hecho por el Partido Comunista
+
+他为什么不让你们去采访呢？
+¿Por qué él no les deja ir a entrevistar?
+
+他不让任何媒体采访呢？
+¿Por qué él no deja que ningún medio haga entrevista?
+
+既然不是共产党造的
+Ya que no es creado por el Partido Comunista
+
+共产党为什么不接受西方的采访了？
+¿Por qué no acepta la entrevista del occidente?
+因为你们死了人
+Porque se les murieron gente
+
+你们有资格去采访
+Ustedes tienen el derecho a entrevistar
+
+为什么不让你们采访
+Por qué no los deja entrevistar
+
+为什么不让你们调查
+Por qué no los deja investigar
+
+你为什么不采访共产党？
+¿Por qué tu no entrevista al PCCh?
+
+你不觉得很荒唐吗？
+¿No te parece absurdo?
+
+伊莎贝拉 亲爱的
+Isabella, querida
+
+太荒谬了！
+¡Esto es ridículo!
+
+这些人死了 你不在乎
+Esta gente se muere, no te interesa
+
+你只在乎有多少人看你的节目
+Solo te interesa cuántas personas ve tu programa
+
+我们只是试图找出事实罢了
+Nosotros sólo intentamos buscar la realidad
+
+你创造和推广的很多故事都非常令人印象深刻
+Los cuentos que creas y difundes dejas fuerte impresión
+
+而且这些故事可能会传播很多远
+Además, estos cuentos pueden difundirse muy lejos
+你对此感到高兴吗？
+¿Te da felicidad por esto?
+
+你完全错了
+Te equivocas por completo
+
+我不会像你们一样这么low
+Yo no soy como ustedes tan chabacano
+
+你们一生都在为金钱而工作
+Ustedes trabajan por el dinero toda la vida
+
+你们忘了你们是媒体 你们忘了你们是记者
+Ustedes olvidaron que son medios de comunicación, son reporteros
+
+GTV、GNEWS 没有任何广告
+GTV, GNEWS no tienen ninguna publicidad
+
+我根本不在乎谁来看 谁不看
+A mi no me importa quien viene a ver y quien no
+
+我们做的事情是你不懂的
+Lo que nosotros hacemos no lo entiendes
+
+因为你们被金钱埋没了你们的良知和信仰
+Porque sus conciencias y creencias han sido enterrados por el dinero
+
+我们在拯救这个世界
+Nosotros estamos salvando a este mundo
+
+我只想把真相告诉世界
+Yo sólo quiero hacer saber el mundo la verdad
+
+让有良知的人真正的用心来了解
+Dejar que las personas con conciencia realmente comprendan
+
+和想知道冠状病毒是哪来的人
+Y gente que quiera saber de dónde viene el coronavirus
+和知道共产党是怎么在威胁世界
+Saber cómo está amenazando el PCCh al mundo
+
+和像新疆这种大屠杀在进行着
+Así como la masacre de Xinjiang que está en plena marcha
+
+和香港孩子死亡的原因
+Y la razón de la muerte de los niños en Hong Kong
+
+我只希望他们知道这些
+Yo sólo espero que ellos sepan esto
+
+我们做到了
+Nosotros lo logramos
+
+最起码有很多有良知的人还有这些科学家
+Al menos hay mucha gente con conciencia y estos científicos
+
+还有良知的政府
+Hay gobierno con conciencia
+
+像福克斯的这几个主持人玛莉亚、塔克
+Así como estos animadores de Fox: María, Tucker
+
+他们在采访、他们在了解
+Ellos están entrevistando, están investigando
+
+还有一些良知的媒体和记者再去了解这个事情
+Aún hay algunos medios y reporteros concienzudos para entender este asunto
+
+我们不需要你们相信我们
+Nosotros no necesitamos que ustedes crean en nosotros
+
+我们从来不奢求你们这些流氓级的媒体来相信我们
+Nunca les pedimos a los medios sinvergüenzas como ustedes que nos crean
+
+因为你们这帮人就是骗子 就是垃圾
+Porque ustedes son unos mentirosos, son basura
+就是犯罪集团的一部分
+Son parte de una compañía criminal
+
+我们只希望让有良知的人知道就可以了
+Sólo espero que las personas con conciencia sepan
+
+希望你们去调查我们 希望你们不要相信我们
+Espero que ustedes vayan y nos investiguen, espero que ustedes no crean en nosotros
+
+你们根据我们说的话去找到真相就可以了
+Ustedes sólo necesitan buscar la verdad de acuerdo a lo que dijimos y listo
+
+* * *
+
+日期：12/30/2021
+原视频标题：郭文贵先生接受 HBO Vice 采访的真相
+La verdad sobre la entrevista del Sr. Guo Wengui con HBO Vice
+
+VICE采访原片 (1:08:04-1:12:24)
+
+原视频日期：12/23/2021
+原视频网址：[https://gettr.com/streaming/pkexq84603](https://gettr.com/streaming/pkexq84603)
+任务编号：KC401(3352)
+视频时间段：1:08:04-1:12:24
+西听校：洛杉矶盘古农场 – 小文萱
+翻译：洛杉矶盘古农场 – 霙霙（文霙）
+翻译终校：洛杉矶盘古农场 – 小文萱
+字幕+视频制作：洛杉矶盘古农场 – 文新
+审片：洛杉矶盘古农场 – 银龙
+发布：洛杉矶盘古农场 – Kevin37L
+
+01：23 一月分 改为一月份
+02：53 传播很多远 改为 传播得很远
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
