--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,27 +1,37 @@
 ---
-title: 重庆武隆疑似食堂燃气燃爆事故，16人遇难
+title: 中共国的污染对中国男性健康的摧残
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1835061/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1835091/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-10.jpg)重庆武隆疑似食堂燃气燃爆事故，16人遇难 网络图片
-据澎湃新闻1月8日报道，重庆市武隆区凤山街道办事处机关食堂7日发生垮塌，疑似食堂燃气泄漏燃爆。事故发生时，办事处部分职工正在食堂用餐。事故造成26人失联，事后搜救出26人，死亡16人。
+精神健康，食物健康、环境健康，是绝定男人头发少或多的最根本原因。
 
-中共国现在到处都是事故，疫苗灾难星火燎原，四处爆发。人员接种疫苗后的副作用，随时也会引发事故。也许这个食堂的工作人员当时突发心梗或者脑梗，无法控制自己触动了紧急阀门，造成燃气泄漏。在中共国全员90%以上接种疫苗的情况下，一切皆有可能。
+【郭先生直播摘要】** 2022.1.1 **性与水与男性的健康，** CCP**污染对中国男性健康的摧残
 
-新闻参考链接：[https://www.thepaper.cn/newsDetail\_forward\_16196263](https://www.thepaper.cn/newsDetail_forward_16196263)
+**郭先生**
 
-* * *
+共产党那些老流氓他总是恨不得， 生下来就给人家蓝金黄去，就给人家上玉米地去。 他让别人一辈子不去玉米地，这是何种的变态呀。 Eglise说的话你看我记住了没有， 这水和一生的关系实际是很大。 文霄看我你跟你七哥一样， 头发都不多了。 你这也是水少的原因， 你知道水多了头发就会很旺，长得就比Ruth这样的头发比这神奇女孩多， 比她们都长， 你简单说说。 你这一生你遇到过水多过吗兄弟? 你遇到过吗? 你现在也没遇到过吧。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+你没尝过这快乐吧， 你知道为啥中国男人头发都普遍比较少吗? 你说说这啥关系？ 就水和男人的头发有什么关系啊兄弟？
 
+**文霄****:**
 
-编辑：【英国伦敦喜庄园编辑部】
+七哥我是从小头发从来就没多过，哈哈哈不是后掉的，先天长的。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+**郭先生**
 
+就是好几代了， 就属于好几代受害的。
 
+**文霄**** **
+
+刚才就是文紫战友说的这句话我想再补充一句，我自己不是医生，但是我妈妈是医生。然后我家里亲戚医生特别多，就是国内这个，现在你问医生啊，这个医患关系紧张很大的问题。就是医生也很不高兴，患者也很不高兴，谁都不高兴。然后这个医生的这个工作强度也很大，然后这个就是跟经济挂钩也很紧。 所以说这个这个不可能有，有那么强的生育欲望。
+
+**郭先生**
+
+谢谢文肖兄弟说对了，我告诉你，这不是七哥乱说你们都是医生，七哥不能信口开河。中国对男性的健康做过调查，英国人平均寿命68岁，法国人平均78岁，意大利、西班牙都平均78岁到80岁，但到了德国就60多岁，连比利时都70多岁，原因很简单，英国人喝啤酒，德国人喝啤酒。德国人、英国人吃的是脂肪油。还有工作压力大，天气没那么好，所以德国、英国人度假往西班牙，冬季到那块去找水去。
+
+而且这几个国家，人家性生活普遍比德国、英国，都要大概多十倍以上，而且吃的是橄榄油，喝的是红酒，所以喝啤酒，吃猪肉，吃脂肪是不好的。 阳光少是不好的， 那么这些国家地方呢。这几个国家普遍男人头发， 比英国、德国男人头发多的多还长， 所以精神健康， 食物健康、环境健康。 是绝定男人头发少或多的最根本原因， 兄弟啊咱们都是几代人被害呀。 爹的头发很年轻时候也都少了， 你知道了吗? 我也是，所以被害，害二代，我头发也都没那么多，是吧？
+
+视频剪辑：北方信使 |听写：烟波浩淼 | 翻译：Arthur | 校对：Polaris | 视频制作+字幕：刀锋舞者 | 编辑&发布：断播
 
  
 
