--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,24 +1,40 @@
 ---
-title: 加拿大BC省医疗系统因奥密克戎而不堪重负
+title: 有声&#124;海外少数民族团体控告中共并抗议冬奥会
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1834982/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1834995/)
 
-采编：文莱       翻译编辑：文所未闻
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a-15-edited.jpg)图片来源：vancouversun
+配音：香草山福音部 – Daxia
 
 
-据加拿大《温哥华太阳报》1月6日报道，由于“奥密克戎”疫情的迅速蔓延所导致的住院治疗人数激增，以及大量医务人员因感染病毒而无法继续工作等原因，BC省的卫生保健系统目前已接近崩溃的边缘。
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E6%96%B0.png)
+当地时间1月4日，据海外多家媒体报道，时逢中共北京冬奥会在即，流亡海外的西藏和新疆群体向当地司法机构提起诉讼，控告中共政府侵害人权。 同时，他们也在当地发起抗议示威活动，以此反对即将到来的北京冬奥会。
 
-据悉，自今年新年伊始，BC省的疫情住院人数增加了44%，重症感染病例增加了14%。由于医务人员严重短缺，该省大部分的医生和护士都被要求放弃休假，并不得不连续加班工作。在如此不堪重负的情况下，该省的大量非紧急手术都因此被迫推迟进行。
+据了解，中共曾在1950年以所谓“和平解放”的名义向西藏派兵。此后，中共政府一直以残酷手段统治着该地区。此外，中共高层及警察部门还在新疆地区大肆建立集中营，并对当地维吾尔人及其他少数民族施以残暴的种族灭绝行为。
 
-该省卫生部门对此表示，由于疫情仍然会因“奥密克戎”病毒的全面传播而进一步恶化，因此广大民众应该尽量呆在家中，并继续配戴口罩，以此缓解医疗系统目前所面临崩溃的巨大压力。
+对此，一群流亡印度的西藏人当天在印度北部的达兰萨拉举行了反对中共北京冬奥会的抗议示威活动。抗议者表示，如果国际社会和运动员不抵制北京冬奥会，他们就会成为中共 “种族灭绝 “的同谋。
 
-* * *
+与此同时，针对中共在新疆地区实施的种族灭绝和反人类罪，生活在土耳其的流亡维吾尔人也在当天对112名中共官员提起了刑事诉讼。此外，还有超过150名维吾尔人聚集在土耳其首都伊斯坦布尔法院前举行示威游行，抗议中共政府的残忍做法。
 
-校对编辑，发稿：硫酸羟氯喹64
+据悉，目前大约 5万名维吾尔人生活在土耳其，他们中的绝大多数都对中共举办冬奥会表示反对。
 
-原文链接： https://vancouversun.com/news/local-news/covid-19-staff-shortages-loom-in-hospitals-as-patient-numbers-rise-workers-fall-ill
+文字版原文：[海外少数民族团体控告中共并抗议冬奥会](https://gnews.org/zh-hans/1828873/)
+
+音频处理：喜山必胜Maverick
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-Jan.jpeg)
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
