--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,27 +1,32 @@
 ---
-title: 日本和美国称中共国的行动是“对地区和世界的挑衅”
+title: 喜聯儲、喜交所、數字銀行、喜幣（HCN／HDO）將成為全球主流金融機構中的独角兽聯合體
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1835344/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1835384/)
 
-![美日“2+2”谈出了个啥？日本在这个问题上获得了美国的首肯_自卫队](https://p4.itc.cn/images01/20210317/e3537f5abf8342d1a4a3763971a4a66e.jpeg)资料图
-据俄罗斯卫星通讯社1月7日报道，在日本和美国两国外长和防长“2+2”形式的会面后，日美两国发布的联合声明中称中共国的行动是“对地区和世界的挑衅”。
+作者：香草山金融部 – 信望爱
+![](https://assets.gnews.org/wp-content/uploads/2021/11/image-40-3.png)
+隨著歐洲的數字銀行和美國的數字銀行收歸新中國聯邦喜聯儲的旗下，這些數字銀行將聯合喜交所開設法幣與數字幣的存貸款業務，由於利息上有無可比擬的優勢，傳統銀行必然面臨存款搬家，隨之而來的是傳統銀行流動性不足，傳統銀行放貸給華爾街的股票質押貸款將面臨著提前收回的巨大風險，當然銀行也會面臨破產倒閉的巨大風險。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture3-1.jpg)
+在傳統銀行巨大的風險面前，聞風而動的億萬傳統銀行儲戶必然是錢進喜聯儲，將如潮水般湧入，傳統銀行儲戶大量的資金轉到數字銀行及喜交所以回避風險，這將加速華爾街上市公司及傳統銀行的倒閉潮，到時新中國聯邦旗下的喜聯儲、喜交所、數字銀行將成為全球主流的金融機構，喜幣（HCN／HDO）數字貨幣將取代傳統的無錨法幣，同時喜幣也會取代無中心管理、無中心負責、無中心服務的三無數字幣。喜聯儲、喜交所、數字銀行、喜幣（HCN／HDO）將成為全球主流金融機構中的独角兽聯合體。
 
-中共一直挑衅地区和世界的政治、经济、军事和技术，还在南中国海横行无忌。中共的扩张和野心超越了疆土，媒体、大外宣、生化武器都是中共扩张的手段，西方世界在利益面前，无视中共的挑衅已经很久了。如今生化武器已经攻击了每一个国家，挑衅变成了直接攻击。
+郭文貴先生領導的爆料革命新中國聯邦、將在中共發起的全球金融超限戰中 取得決定性勝利，文貴先生制定的空中取餞、以錢滅共策略將取得彻底勝利。一個沒有共產專制的千年和平將會由此展開。
 
-新闻参考链接：[https://sputniknews.cn/20220107/1036993042.html](https://sputniknews.cn/20220107/1036993042.html)
+参考来源：[喜聯儲、喜交所、數字銀行、喜幣（HCN／HDO）將成為全球主流金融機構中的独角兽聯合體](https://gettr.com/post/pmlnsy69b1)
 
-编辑：胖丁
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg)
 
-* * *
+编辑/校对/发稿：Hetangyuese
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+**更多资讯，更多关注**
+[**纽约香草山农场 GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场 GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-1.png)
 
 
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
