--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,27 +1,11 @@
 ---
-title: 中共的一胎三胎的计划生育是对人性的扭曲
+title: 西安居民因翻越隔离护栏买食物被迫电视认罪
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1835279/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835347/)
 
-一胎和三胎， 本质上他是一个对人性的扭曲。年轻人他们压力太大了，他们都不愿意再谈生育的事情。
+01/02/2022 一位西安居民被迫电视认罪，因为他翻越了隔离区护栏试图出去买食物。
 
-**【郭先生直播摘要】 2022.1.1 中共的一胎三胎的计划生育是对人性的扭曲**
-
-**郭先生：**
-
-我是今天从上午到现在，我就在想一个严肃的话题。 我今天特别要请教Ruth， 你要跟我们战友们解释一个话题，中国过去的一胎制和现在让生多胎，和这个水多水少有关系吗? 我想请教请教。
-
-**Ruth**
-
-当然我觉得肯定有关系，因为我觉得现在其实，当然我出国很多年了，但是我觉得现在，中国普遍的年轻人他们压力太大了，就是说基本上我说有个笑话说，在职场上是把女的当男的用，把男的当牲口用，然后他们一直是强调是说要加班，把这个人压榨到极致。所以年轻人他们压力太大了。他们基本上就说有，还说他们说都不愿意再谈生育的事情，说民不聊生，就是你不要跟我聊生育的话题。
-
-因为他们已经不堪重负了，你把一个牲口逼到这种地步，他已经不愿意再为你再生韭菜了，这就是已经到了一个死角，对不对？你老百姓说我没有办法再去（生），我不愿意再为你制造韭菜了。所以这就是说你把这个逼到到极致。
-
-**郭先生：**
-
-这个每个时段啊，主播咱往后就是咱往后就都顺延半小时，咱要把这个顺延半小时，把这个问题水的事。真的今天很深刻啊，你别老夸你七哥，我今天中午我就搂几眼。我看你们那块，都是跟歌颂毛主席一样，歌颂金太阳一样，你歌颂七哥干嘛浪费时间。咱讲点水的故事比啥都爱听我跟你讲，行我就是跟你讲这个，一胎和三胎，本质上他是一个对人性的扭曲，他让女性没有水，让男性没有有水的能力。最后连生韭菜的欲望都没有了，这很深刻呀！
-
-视频剪辑：北方信使 |听写：烟波浩淼 | 翻译：精糧 | 校对：烟波浩淼|视频制作+字幕：芥末| 编辑&发布：断播
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
